corrections are complete

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1071,25 +1071,8 @@ satayx eMdu sArutAtxre:}
 \begin{entry}
 \word{dashavidha vAyugaLanunx nililxsuvudu}
 \src{va}
-\meaning{\arthanonum{pArxNa, vAyxna, apAna, udAna, samAna, nAga, kUmaR, kaqkara,
- deVvadatatx matutx dhanaMjaya eMba hatutx vAyugaLa deseyiMdAgi
- shariVra matutx aMtaHkaraNagaLalilx oLeLxya matutx keTaTx
- caTuvaTikegaLu naDeyutitxrutatxve. aikayxsithxtiyanunx
- talupabeVkenunxvavanu I vAyxpAragaLanunx niyaMtirxsi 
- avugaLanunx adhAyxtamxsAdhanege upayoVgisikoLaLxbeVku. Aga
- vAyupArxNiyAgidadxvanu liMgapArxNiyAgutAtxne. hatutx vAyugaLanunx
- hatutx sAthxnagaLalilx nililxsuvudakekx vivara.}}
-\newmeaning{\arthanonum{\qquad pArxNavAyuvanunx pArxNaliMgadalilxyU, apAnavAyuvanunx
- parxsAdaliMgadalilxyU nililxsabeVku. sAloVkayx, sAmiVpayx, sArUpayx
- matutx sAyujayx eMba catuviRdha padavi beVkeMba bayakeyanunx
- aLisihAki, keVvala liMgadhAyxna mADidare, vAyxnavAyuvina
- duSapxriNAmagaLanunx niyaMtirxsabahudu. udedxVshapUvaRkavAgi nAvu
- caMcalacitatxrAgi anayxgamana mADuvudu udAnavAyuviniMdAgi.
- liMgadhAyxna mADidare sucitatxdalilx A vAyuvu nelegoLuLxtatxde hAgU
- adara duSapxriNAmagaLu kaDimeyAgutatxve. dhAyxnadiMduMTAguva
- savxyaMjoyxVtiya parxBeyalilx samAna vAyuvanunx nelegoLisi adara
- duSapxriNAmagaLanunx ilalxvAgisabahudu:}
-\ullekha{pArxNAdi vAyugaLa kaLedu BakatxrAdaremamxvaru - adeMteMdaDe : alalxlilxdaR dashavAyugaLa dashasAthxnadalilx nilisi Bakitxya mADuva pariya heVLihe keVLiraNANx (savasaM. 3; cenanxba. 1428-511).}}
+\meaning{\arthanonum{pArxNa, vAyxna, apAna, udAna, samAna, nAga, kUmaR, kaqkara, deVvadatatx matutx dhanaMjaya eMba hatutx vAyugaLa deseyiMdAgi shariVra matutx aMtaHkaraNagaLalilx oLeLxya matutx keTaTx caTuvaTikegaLu naDeyutitxrutatxve. aikayxsithxtiyanunx talupabeVkenunxvavanu I vAyxpAragaLanunx niyaMtirxsi  avugaLanunx adhAyxtamxsAdhanege upayoVgisikoLaLxbeVku. Aga vAyupArxNiyAgidadxvanu liMgapArxNiyAgutAtxne. hatutx vAyugaLanunx hatutx sAthxnagaLalilx nililxsuvudakekx vivara.}}
+\newmeaning{\arthanonum{\qquad pArxNavAyuvanunx pArxNaliMgadalilxyU, apAnavAyuvanunx parxsAdaliMgadalilxyU nililxsabeVku. sAloVkayx, sAmiVpayx, sArUpayx matutx sAyujayx eMba catuviRdha padavi beVkeMba bayakeyanunx aLisihAki, keVvala liMgadhAyxna mADidare, vAyxnavAyuvina duSapxriNAmagaLanunx niyaMtirxsabahudu. udedxVshapUvaRkavAgi nAvu caMcalacitatxrAgi anayxgamana mADuvudu udAnavAyuviniMdAgi. liMgadhAyxna mADidare sucitatxdalilx A vAyuvu nelegoLuLxtatxde hAgU adara duSapxriNAmagaLu kaDimeyAgutatxve. dhAyxnadiMduMTAguva savxyaMjoyxVtiya parxBeyalilx samAna vAyuvanunx nelegoLisi adara duSapxriNAmagaLanunx ilalxvAgisabahudu:} \ullekha{pArxNAdi vAyugaLa kaLedu BakatxrAdaremamxvaru - adeMteMdaDe : alalxlilxdaR dashavAyugaLa dashasAthxnadalilx nilisi Bakitxya mADuva pariya heVLihe keVLiraNANx (savasaM. 3; cenanxba. 1428-511).}}
 \end{entry}
 
 %\begin{entry}
@@ -1102,7 +1085,7 @@ satayx eMdu sArutAtxre:}
 %dikikxnalilx shakitxyanunx koMDoyayxbeVkeMbudanunx sAdhakanu
 %nidhaRrisabeVku. ``deVhada kale (kalAshakitx)yiruva tanaka iSaTxliMga
 %saMbaMdha'' keVvala aupacArikaveV horatu, pariNAmakAriyalalx.}}
-\end{entry}
+%\end{entry}
 
 \begin{entry}
 \word{deVhadeVhigaLa utapxtitxsathxla}
@@ -1872,14 +1855,6 @@ parivataRnegaLige atiVta, avaneV nija (satayx), shAshavxta.}}
 \word{pashupatiyabarxta}
 \meaning{\arthanonum{shivananunx kuritu mADuva varxta:} \ullekha{bAradu bAradu viSayige pashupatibarxtavu (savasaM. 1; basava. 771-196); ``barxhAmxdi pashugaLige oDeyanAda shivana saMbaMdha\-vAda SaDivxdhashiVlavanenxV aMgava mADikoMDu SaDivxdha\-varxta\-vanenxV pArxNava mADikoMDu AcarisuvaMtha AcaraNeyu" (basaTiV. {\rm\em{II,}} 153-772 TiVku).}}
 \end{entry}
-
-\begin{entry}
-\word{parxNavanAda}
-\src{va}
-\meaning{\arthanonum{shariVradalilxruva navacakarxgaLige saMbaMdhisi\-daMte, dhAyxnasathxnAda shivayoVgige keVLibaruva heNuNxduMbiyanAda, veVNunAda, GaMTAnAda, BeVrinAda, meVGanAda, parxNavanAda, kiMkiNinAda, agaNitanAda, divayxnAda eMba oMbatutx bageya parxNavanAda\-gaLu:}
-\ullekha{I parxNavaMgaLa nAdaMgaLAvAveMdaDe (savasaM. 3; cenanxba. 1268-441).}}
-\end{entry}
-%peNudxMbinAda, veVNunAda, GaMTAnAda, BeVrinAda, meVGanAda, parxNavanAda, kiMkiNinAda, agaNitanAda, divayxnAda
 
 \begin{entry}
 \word{parxNavadaAkaqtigaLu}
