--- a/tex-for-print/jss-001-281.tex
+++ b/tex-for-print/jss-001-281.tex
@@ -9,7 +9,7 @@
 \begin{entry}
 \word{aMkurashiVla}
 \src{saM}
-\meaning{\arthanonum{sadAcArakekx saMbaMdhisida eMTu vidha shiVlagaLalilx oMdu. guruvina karuNeyiMda \hbox{uMTAda}, SaDadhavxnAyxsadiMda shoVBisutitxruva tananx shariVraveV elalxkUkx kAraNa eMba BAvaneyu moLakeyoDeyuvudu shiVla:}} 
+\meaning{\arthanonum{sadAcArakekx saMbaMdhisida eMTu vidha shiVlagaLalilx oMdu. guruvina karuNeyiMda \hbox{uMTAda}, SaDadhavx\-nAyxsadiMda shoVBisutitxruva tananx shariVraveV elalxkUkx kAraNa eMba BAvaneyu moLakeyoDeyuvudu shiVla:}} 
 \vskip .3cm
 \begin{shl}
 aMkurAKayxM parxvakASxyXmi biVjaBUtaM samAsataH |\\[2pt]
@@ -22,8 +22,6 @@ tanuH sivxVyA pArxkaqteVti BAvoV{\char'263}Mkura itiVyaRteV ||
 \newmeaning{\ni{aMkurashiVlaM, aMkurashiVlanaM shiVla samAdhw, shiVlati iti shiVlaM, shiVlanaM - BAvanAma, aMkuraH - aki - lakaSxNeV, aMkayxteV iti aMkuraH, aMkurasayx aMkureV vA shiVlanaM - aMkurashiVlanaM.}}
 \newmeaning{\arthanonum{\SEE{sadAcAra}}}
 \end{entry}
-
-\smallskip
 
 \begin{entry}
 \word{aMkusha}
@@ -44,7 +42,7 @@ parxsAdaveMbudu Bavagajakekx aMkusha\-vAgipuRdu (savasaM. 10; kADasi. 191-121).}
 \word{aMga}
 \meaning{\artha{oDalu, deVha:}
 \ullekha{shivajanamxdalilx huTiTx liMgeYkayxrAgi tamamx aMgada meVle shivaliMgavirutitxralu anayxrane hADi anayxrane hogaLi anayxra vacanava koMDADalu kamaR biDadu Bava\-baMdhana (savasaM. 1; basava. 107-29); aMgakokxMdu suguNa duguRNa soVMkuvalilx soVMkida kale aMgakokxV AtamxMgoV (savasaM. 6; aMgasoVM. 1-1).}
-\artha{deVhada oMdu BAga; avayava:} \ullekha{shira\-sUsxrudavxyaM toVLagxLavu yugaM tAnaMga\-venipaveY (viVsheYpu. 7-100-29).} \artha{tavxkukx athavA camaR eMbalilx aMga eMbudu camaRkekx anavxyisutatxde:} \ullekha{aMgada koneyalilx liMga muMtalalxde saMgava mADanA sharaNanu (savasaM. 3; cenanxba. 305-96).}
+\artha{deVhada oMdu BAga; avayava:}\break \ullekha{shira\-sUsxrudavxyaM toVLagxLavu yugaM tAnaMga\-venipaveY (viVsheYpu. 7-100-29).} \artha{tavxkukx athavA camaR eMbalilx aMga eMbudu camaRkekx anavxyisutatxde:} \ullekha{aMgada koneyalilx liMga muMtalalxde saMgava mADanA sharaNanu (savasaM. 3; cenanxba. 305-96).}
 \artha{Atamx:} \ullekha{liMgAMgasAmarasayx eMba padavu parashiva matutx Atamx ivugaLa sAmarasayxkekx anavxyisutatxde.}
 \artha{shudadhx jiVvAtamx; shivAMsha\-vuLaLx ceVtana; liMga\-diVkeSxyanunx hoMdida jiVva:}
 \ullekha{liMga\-veMdoDe nAdaM A nAdada aMgaveMdoDe cidibxMduvAda jiVvaM (manoVvi. 6-31 TiVku); aMgakekx 
@@ -78,8 +76,6 @@ nilukadu maMgaLamUruti saMgarahita nija\-liMgana noVDiro (kUDasavx. 60 anupalalx
 \artha{{\fontsize{14pt}{12pt}\selectfont aMganiraMgada kUTa:} aMgadalilx aMgavanunx kUDisuva meYthunakirxye pArxNigaLige sahajavAdadudx. Adare mumukuSxvu tananx aMgavanunx (jiVvAtamxvanunx) niraMga\-nalilx (=paramAtamxnalilx) beresidare, adeV aMganiraMga kUTa, athavA liMgAMgasAmarasayx:} \ullekha{aMganiraMgava kUDi saMGaTisuvAga caMdana gaMdhadaMte kirxV jAcnxna BeVda. \hbox{adaraMgava} tiLidalilx kAlAMtaka BiVmeVshavxraliMgavanaridudu (savasaM. 7; Dakekxbo. 915-288).}}
 \newmeaning{\ni{aMgaM, niraMgaM - nigaRtaM aMgaM yasAmxtf tatf \hbox{niraMgaM}, aMgaM ca niraMgaM ca aMganiraMgeV, tayoVH aMganiraMgayoVH}}
 \end{entry}
-
-\vskip -.2cm
 
 \begin{entry}
 \word{aMgakirxye}
@@ -231,8 +227,6 @@ ivu saqSiTxnAyxsa, sithxtinAyxsa, saMhAranAyxsa eMdive. SaDakaSxra\-maMtarxgaLan
 \vskip 1pt
 \newmeaning{\ni{aMgasayx muKaM - aMgamuKaM.}}
 \end{entry}
-
-%\medskip
 
 %\begin{entry}
 %\word{aMgarahitavAda saMga}
@@ -449,8 +443,6 @@ jAlagA\char'273naM sharadhi nuMgida kaMDeneMdeMbudiVgaLurutaradaMgaleVpasathxlaM
 \vskip -2pt
 \newmeaning{\arthanonum{\SEE{aMga}}}
 \end{entry}
-
-\vskip -2pt
 
 \begin{entry}
 \word{aMgaviSayaBArxMta}
@@ -836,8 +828,6 @@ BUtAdiyeYdu ...aMtaH\-karaNacatuSaTxyavavoMdi ipaRtutxnAlukx tatatxvXMgaLAtamx s
 \newmeaning{\ni{aMtaHkaraNAnAM catuSaTxyaM - aMtaHkaraNacatuSaTxyaM}}
 \end{entry}
 
-\vskip 2pt
-
 \begin{entry}
 \word{aMtaHkaraNacatuSaTxyavirahitaparxsAda}
 \src{koV}
@@ -846,8 +836,6 @@ BUtAdiyeYdu ...aMtaH\-karaNacatuSaTxyavavoMdi ipaRtutxnAlukx tatatxvXMgaLAtamx s
 \newmeaning{\ni{aMtaHkaraNAnAM catuSaTxyaM, teVna virahita parxsAdaH - aMtaHkaraNacatuSaTxyavirahitaparxsAdaH}}
 \end{entry}
 %\arthanonum{aMtaHkaraNacatuSaTxyagaLiMda dUravAgi parxsAdavanunx paDeyuvudu: (viV.pA.koV. 7)}
-
-\vskip 2pt
 
 \begin{entry}
 \word{aMtaHkaraNashudidhx}
@@ -858,8 +846,6 @@ shivoVhaMyenipupxdeyahaMkAraveMda\char'273\char'236vudu iMtiV catuviRdhaM pariki
 \vskip 1pt
 \newmeaning{\ni{aMtaHkaraNasayx aMtaHkaraNAnAM vA shudidhxH - aMtaHkaraNa\-shudidhxH}}
 \end{entry}
-
-\vskip 2pt
 
 \begin{entry}
 \word{aMtayx}
@@ -878,8 +864,6 @@ layaH savaRpadAthARnAM aMtayx ituyxcayxteV budheYH |
 \end{entry}
 %\newmeaning{\ullekha{piMDaveV AdiyAgi, jAcnxnaveV shUnayxvAgi... Adi aMtayxgaLeraDu madhayxdalilx nilalxlu... (savasaM. 1; basava. 1267-349); ayayx! muMde matayxRloVkada mahAgaNaMgaLu... pAvanAthaRvAgi savxya...cara...para, Adi...aMtayx...seVvayxsathxla modalAda... (savasaM. 2; alalxma. 802-233); nAdadiMdAda saMga vinoVdasaMga... idu nimamx kalapxne, Adi aMtayxva balalxDe, balalxnu... (savasaM. 3; cenanxba. 1299-459); Adiyalilx bayalu, aMtayxdalilx bayalu... (savasaM. 4; sidadhxrA. 1804-515); jAcnxnaliMgada Adi aMtayxvanarivaDe... (savasaM. 8; moVLige. 1781-584).}}
 
-\vskip 2pt
-
 \begin{entry}
 \word{aMtayxja}
 \src{va}
@@ -889,8 +873,6 @@ layaH savaRpadAthARnAM aMtayx ituyxcayxteV budheYH |
 \newmeaning{\ni{aMtayxH sanf jAyateV iti - aMtayxjaH}}
 \end{entry}
 
-\vskip 2pt
-
 \begin{entry}
 \word{aMtayxnAsitx}
 \src{va}
@@ -899,8 +881,6 @@ layaH savaRpadAthARnAM aMtayx ituyxcayxteV budheYH |
 \vskip 1pt
 \newmeaning{\ni{aMteV BavaM aMtayxM - aMtayxM nAsitx}}
 \end{entry}
-
-\vskip 2pt
 
 \begin{entry}
 \word{aMtayxpiMDa}
@@ -1080,8 +1060,6 @@ na savxBAva iti jAcnxnAdaMtarAtemxVti kathayxteV ||
 \newmeaning{\ni{aMtarAtAmx iti sathxlaM yasayx tatf - aMtarAtamxsathxlaM}}
 \end{entry}
 
-\vskip 2pt
-
 \begin{entry}
 \word{aMtarAyanirasanashiVla}
 \meaning{\arthanonum{aravatutx nAlukx shiVlagaLalilx oMdu; nAyi muTiTxda athavA camaRdiMda mADida padAthaRgaLanunx tayxjisuvudu:}
@@ -1089,8 +1067,6 @@ na savxBAva iti jAcnxnAdaMtarAtemxVti kathayxteV ||
 %\smallskip
 %\newmeaning{\ni{aMtarAyanirasanasathxlaM - aMtarAyasayx nirasanaM - aMtarAya nirasanaM - aMtarAyanirasanaM iti sathxlaM yatf tatf aMtarAyanirasanasathxlaM}}
 \end{entry}
-
-\vskip 2pt
 
 \begin{entry}
 \word{aMtanAyxRsa}
@@ -1101,8 +1077,6 @@ na savxBAva iti jAcnxnAdaMtarAtemxVti kathayxteV ||
 \newmeaning{\ni{aMtaH nayxsanaM Eva - aMtanAyxRsaH}}
 \end{entry}
 
-\vskip 2pt
-
 \begin{entry}
   \word{aMtaBaRvi}
   \src{kA}
@@ -1110,8 +1084,6 @@ na savxBAva iti jAcnxnAdaMtarAtemxVti kathayxteV ||
 \vskip 1pt
 \newmeaning{\ni{aMtaH BaviH yasayx saH - aMtaBaRviH}}
 \end{entry}
-
-\vskip 2pt
 
 \begin{entry}
 \word{aMtamuRKasuKa}
@@ -1122,8 +1094,6 @@ na savxBAva iti jAcnxnAdaMtarAtemxVti kathayxteV ||
 \newmeaning{\ni{aMtaH vidayxmAnaM muKaM aMtamuRKaM, tasayx aMta\-muRKasayx suKaM - aMtamuRKasuKaM}}
 %teVna aMtamuRKasuKeVna virahitaH aMtamuRKasuKavirahitaH}}
 \end{entry}
-
-\vskip 2pt
 
 \begin{entry}
 \word{aMtayARga}
