mainfile.tex is added

--- a/mainfile.tex
+++ b/mainfile.tex
@@ -14,9 +14,9 @@
 
 
 \input macros
-%\input final-dict
+\input raghu
 %\input dictionary %for jss-001-281.tex
-\input dict-1.tex %for jss-282-501.tex
+%\input dict-1.tex %for jss-282-501.tex
 %\input dict-2.tex %for jss-282-501.tex
 %\input dictionary3
 %\input anu-dictionary
@@ -30,14 +30,11 @@
 
 \begin{multicols}{2}
 \setlength{\columnseprule}{.5pt}
-%\input tex-for-print/jss-001-281.tex
-\setcounter{page}{261}
+\input tex-for-print/jss-001-281.tex
 \input tex-for-print/jss-282-501.tex
-%\setcounter{page}{559}
-%\input tex-for-print/ya-La.tex
+\input tex-for-print/ya-La.tex
 \newpage
-%\setcounter{page}{767}
-%\input tex-for-print/anubandha-1.tex
+\input tex-for-print/anubandha-1.tex
 \end{multicols}
 \newpage
 \input tex-for-print/anubandha-2.tex
