work in progress

--- a/tex-for-print/jss-001-281.tex
+++ b/tex-for-print/jss-001-281.tex
@@ -65,14 +65,12 @@ nilukadu maMgaLamUruti saMgarahita nija\-liMgana noVDiro (kUDasavx. 60 anupalalx
 \artha{{\fontsize{14pt}{12pt}\selectfont shakitx:} (= jiVva, piMDa)}
 \ullekha{shivasutx barxhamxceYvoVkatxH shakitx\-reVvAMgamucayxteV~| shivashakitxsamA\-yoVgoV jagatasxqqSaTxyXthaR\-kAraNamf || (shi.ta.ra., BA - 1, 1:4:49).} \artha{{\fontsize{14pt}{12pt}\selectfont aMgada cidaginx:} shariVradalilx manasisxde, manasisxnalilx BAvavide. BAvadAce `citf' ide. cidAnaMdasavxrUpavAda ceYtanayx{shakitx} citfnalilxruvudariMda alilx divayxteVjasusx (aginx) ide. `citf' eMba aginxyalilx shAriVraka AcaraNe\-gaLanunx hAki manada keTaTx guNagaLanunx suTuTxhAkabeVku:}
 \ullekha{aMgada cidaginx\-yoLu aMgadAcaraNeya hAki hAge dahisidA Basamxvanu~| maMgaLada rakeSx... (ni: va 15:6).} \artha{{\fontsize{14pt}{12pt}\selectfont aMgada BaMga:} aMganu (sAdhakanu) para\-shivaniMda BinanxveMdukoMDirutAtxne hAgU {taninxMda} BinanxvAda liMgavanunx pUjisutAtxne. Adare, aikayxsathxlavanunx muTiTxda meVle tAnu aMgadiMda BaMganeMbudu keVvala Barxme {eMbudu} avanige gotAtxgutatxde:}
-\ullekha{aMgada BaMgava liMga\-muKa\-diMda gelide. manada BaMgava aruhina muKadiMda gelide (savasaM. 5; akakxmA. 5-3). (BaMgaH - BaMjoV - AmadaRneV, Banakitx iti BaMgaH - BaMganaM - BaMgaH).} 
+\ullekha{aMgada BaMgava liMga\-muKa\-diMda gelide. manada BaMgava aruhina muKadiMda gelide (savasaM. 5; akakxmA. 5-3).} 
 \artha{{\fontsize{14pt}{12pt}\selectfont aMgada laya:} deVhada guNa ilalxvAguvudu; liMgAMgasAmarasayxda anuBavadiMda aMganu tAnu parxteyxVkaneMdu tiLiyade, parashivanalilxruva oMdu arivuLaLx kaNa eMdu tiLiyutAtxne - aMganu tAnu ilalxveV ilalx, parashivanaSeTxV idAdxne, parashiva iciCxsidaMte tAnu kelasa mADuvudAgi heVLutAtxne. biVjavu moLakeyoDeda meVle heVge biVjavu naSaTxvAgutatxdeyoV hAgeyeV aMganu liMgavanunx arita meVle aMgatavxvanunx kaLedukoLuLxtAtxne (layaH - liVcnf - shelxVSaNeV, liVyateV iti layaH, layanaM - layaH).}
 \artha{{\fontsize{14pt}{12pt}\selectfont aMgadAcAra:} aMga eMdare parashivana nele\-yAgiralu yoVgayxvAda Atamx, aMtha aMgada AcAra\-gaLelalx niSAThx\-pUvaRka dhAmiRka kirxyegaLU, sharxdAdhxpUvaRka neYtika \hbox{kirxyegaLU} AgirabeVkAgutatxde:}
 \ullekha{aMgadalilx AcArava toVrida A AcAraveV liMgaveMdaruhida (savasaM. 5; akakxma. 2-5).}
-\ni{aMgada + AcAra - AcAraH - cara - gatiBakaSxNayoVH, carati iti caraH, caraH Eva cAraH. A + carati, A + cAraH - AcAraH}.
 \artha{{\fontsize{14pt}{12pt}\selectfont aMgadudaya:} AtamxsAkASxtAkxra; jiVvanige tAnu shivana aMga eMba jAcnxnavuMTAguvudu:}
 \ullekha{aMgadudaya liMgasuKa (savasaM. 3; cenanxba. 860-257).}
-\ni{aMgada + udaya - udayaH - utf + iNf - gatw, udeVti, udayxMti garxhAH asimxnf iti udayaH}
 \artha{{\fontsize{14pt}{12pt}\selectfont aMganiraMgada kUTa:} aMgadalilx aMgavanunx kUDisuva meYthunakirxye pArxNigaLige sahajavAdadudx. Adare mumukuSxvu tananx aMgavanunx (jiVvAtamxvanunx) niraMga\-nalilx (=paramAtamxnalilx) beresidare, adeV aMganiraMga kUTa, athavA liMgAMgasAmarasayx:} \ullekha{aMganiraMgava kUDi saMGaTisuvAga caMdana gaMdhadaMte kirxV jAcnxna BeVda. \hbox{adaraMgava} tiLidalilx kAlAMtaka BiVmeVshavxraliMgavanaridudu (savasaM. 7; Dakekxbo. 915-288).}}
 \newmeaning{\ni{aMgaM, niraMgaM - nigaRtaM aMgaM yasAmxtf tatf \hbox{niraMgaM}, aMgaM ca niraMgaM ca aMganiraMgeV, tayoVH aMganiraMgayoVH}}
 \end{entry}
@@ -356,7 +354,7 @@ aMgaliMgaparxtiSAThxKAyxM diVkASxM shiSayxsayx dhiVmataH |\\
 \begin{entry}
 \word{aMgaliMgi}
 \meaning{\arthanonum{deVhada meVle iSaTxliMgavanunx dharisidavanu; savARMga\-dalilxyU shivatatatxvXvanenxV aLavaDisikoMDiruvavanu:}
-\ullekha{aMga\-liMgi\-gaLige savxyARGarxyX pAdAyxcamanaveMbuda\-nariyade kaqta\-kamaR BavijiVvi sheYvapASaMDaraMte (savasaM. 3; cenanxba. ????); aMga\-liMgi\-gaLalilx liMgApiRtakekx hoVgibaMduda\-nati\-gaLeyadidadxDe virakatx\-reMbenu (savasaM. 5; amuge. 639-199); aMgaliMgi\-yAdalilx, jAgarxdalilx eDebiDuvilalx\-dira\-beVku (savasaM. 8; manasaM. 893-314); I BeVdava \hbox{tiLiyabalalxre} \hbox{aMgaliMgi} pArxNaliMgi savARMgaliMgi eMda\-nayAyx (savasaM. 10; kADasi. 267-168); jAcnxnavaMgaM\-jecnxV\-yaveV liMgaveMdenisi\-koMDipuRdu iMteraDanuLaLxvaneyaMga\-liMgi (viVsheYpu. 8-124-8).}}
+\ullekha{aMga\-liMgi\-gaLige savxyARGarxyX pAdAyxcamanaveMbuda\-nariyade kaqta\-kamaR BavijiVvi sheYvapASaMDaraMte (savasaM. 3; cenanxba. 851-380); aMga\-liMgi\-gaLalilx liMgApiRtakekx hoVgibaMduda\-nati\-gaLeyadidadxDe virakatx\-reMbenu (savasaM. 5; amuge. 639-199); aMgaliMgi\-yAdalilx, jAgarxdalilx eDebiDuvilalx\-dira\-beVku (savasaM. 8; manasaM. 893-314); I BeVdava \hbox{tiLiyabalalxre} \hbox{aMgaliMgi} pArxNaliMgi savARMgaliMgi eMda\-nayAyx (savasaM. 10; kADasi. 267-168); jAcnxnavaMgaM\-jecnxV\-yaveV liMgaveMdenisi\-koMDipuRdu iMteraDanuLaLxvaneyaMga\-liMgi (viVsheYpu. 8-124-8).}}
 \smallskip
 \newmeaning{\ni{aMgaM Eva liMgaM asayx asitx iti - aMgaliMgiV}}
 \end{entry}
@@ -10478,7 +10476,7 @@ tayxkAtxvX saMkalapxmAterxVNa kAruNAyxnAM vidhiVyateV |
 
 \begin{entry}
 \word{ArUDhakUTa}
-\meaning{\arthanonum{liMgAMga sAmarasayx, aikayxsithxti.} \ullekha{ArUDhakUTa kapilasidadhxmalilxkAjuRnana kUDida AnaMda dAritA samate rUpa (si.va., 1135).}}
+\meaning{\arthanonum{liMgAMga sAmarasayx, aikayxsithxti.} \ullekha{ArUDhakUTa kapilasidadhxmalilxkAjuRnana kUDida AnaMda dAyikA samate rUpa (si.va., 1135).}}
 \end{entry}
 
 \begin{entry}
@@ -10911,7 +10909,7 @@ vayxkatxM hayxhaMkaqtipadeV shivaliMgamAhuH ||
 \begin{entry}
 \word{idiru}
 \src{va}
-\meaning{\arthanonum{eduru, viroVdha (sA.A), parashiva:}
+\meaning{\arthanonum{eduru, viroVdha, parashiva:}
 \ullekha{tanuguNa\-nAsitxyAgi liMgasaMgiyAdaLu. managuNanAsitxyAgi arivu\-saMgiyAdaLu. BAvaguNanAsitxyAgi mahAparxBe tAnAdaLu. `tAnu' `idiru' eMba eraDaLidu namamx guheVshavxraliMgadalilx savxyaliMgavAda mahAdeVviyakakxgaLa nilaviMge sharaNenutideRnu (savasaM. 2; alalxma. 1225-362).}}
 \end{entry}
 
@@ -11419,8 +11417,19 @@ pUjayeVninxyataM liMgaM pArxNaliMgaparAyaNaH ||
 \smallskip
 \newmeaning{\ullekha{iSaTx\-liMgakekx aMgadalilxya macacxna, lalATadalilxye gaMdhAkaSxte. 
  (savasaM. 2; alalxma. 942-283); kirxV AcaraNe shudadhxvAdalilx iSaTxliMga\-pUje. rUpu ruci EkavAdalilx pArxNaliMgapUje (savasaM. 8; moVLige. 1710-562); tanuva samapiRsi beVDikoMDu horagaNa honunx heNuNx maNuNx SaTakxmaRMgaLa biTuTxdeV iSaTxliMga\-pUje (savasaM. 11; GanaliM. 725-337).}}
+\newmeaning{\arthanonum{{\large iSaTxliMga catuviRdha pUje:} iSaTxliMgapUjeyu mahatiV, guviRV, laGivxV, avasarA eMdu nAlukx vidha. mahatiVpUjeyanunx utatxmanu (SaTfkAlagaLalilx pUjemADuvavanu), guviRVpUjeyanunx madhayxmanu (tirxkAla pUjemADuvavanu), ashakatxnu pArxtaHkAla \hbox{muMtAda} samayadalilx BoVjana samayadalilx avasarA pUje\-yanunx mADabeVku:}}
+\smallskip
+\begin{shl}
+utatxmoV mahatiVM kuyARdf guviRVM madhayxma Eva ca |\\
+laGivxVmashakatxH kuyARcacx sAyaM mAdhAyxhanxkeV tathA ||\\
+avasarA BoVjaneV porxVkAtx pArxtarAdiSu suvarxteV |\\
+tirxkAlamacaRnAM kuyARcaCxkatxH SaTfkAlameVva vA ||
+\end{shl}
+\medskip
+\pauthor{(kA. A., kirx. pA., 4. 5-6; makuTa., kirx. pA., 3. 3-4)}
 \vskip 2pt
 \newmeaning{\ni{iSaTxliMgasayx pUjA - iSaTxliMgapUjA}}
+\newmeaning{\arthanonum{\SEE{mahatiVpUjA, guviRVpUjA, laGivxVpUjA, avasarApUjA}}}
 \end{entry}
 %iSaTxliMgavanunx dharisidavaneV iSaTxliMga pUjeyanunx mADabeVkeV horatu, matotxbabxru mADabAradeMbudu AdeVsha. guDigaLalilx parxtiSAThxpitavAgiruva sAthxvaraliMgada pUjeyanunx pUjAri mADuvAga uLidavaru BakitxyiMda noVDabahudu. elalxrU adanunx pUjisalAraru. alalxde iSaTxliMgavanunx jAti mata liMga BeVdavilalxde yArAdarU paDedu pUjisabahudu. sAthxvaraliMgapUjakarige I sAvxtaMtarxyXvilalx. AdhAyxtimxka sAdhaneyalilx muMduvaridavaru tamamx iMdirxya, manasusx, deVhagaLalelxV liMgavanunx parxtiSAThxpisikoLuLxtAtxre. aMthavarige iSaTxliMgavu tamamxlilx aMtasathxvAgiruva citf\-savxrUpa liMgada kuruhAgutatxde (va.pa.koV. 89)
 
@@ -15405,6 +15414,13 @@ jAcnxnashakitxdashAMsheVna kataqRsAdAKayxmudaBxvamf |
 \end{entry}
 
 \begin{entry}
+\word{katARranakamamxTa}
+\src{va}
+\meaning{\arthanonum{parashivana TaMKashAle:} \ullekha{matayxRloVkaveMbudu katARrana kamamxTavayAyx, ililx salulxvaru alilxyU salulxvarayAyx, ililx salalxdavaru alilxyU salalxru (savasa. 1; basava. 155-40).}}
+\end{entry}
+
+
+\begin{entry}
 \word{katuR}
 \src{va}
 \meaning{\arthanonum{= kataqR:}
@@ -17591,7 +17607,7 @@ tatapxrA AgamA yasAmxtf tadukotxV{\char'263}yaM kirxyAgamaH ||
 
 \begin{entry}
 \word{kirxyAdiVkeSx}
-\meaning{\arthanonum{veVdhAdiVkeSx, maMtarxdiVkeSx matutx kirxyAdiVkeSx eMba mUru vidha diVkeSxgaLalilx oMdu parxkAra; shiSayxna vAmakara\-piVThadalilx iSaTxliMgavanunx sAthxpisuva saMsAkxra; I diVkeSxyiMda shiSayxna sUthxlashariVragatavAda kAmiRkamalavu nAshavAgutatxde. maMTapa, deVvatAdi parxtiSAThxpUvaRka kirxyAparxdhAna diVkeSx:}}
+\meaning{\artha{veVdhAdiVkeSx, maMtarxdiVkeSx matutx kirxyAdiVkeSx eMba mUru vidha diVkeSxgaLalilx oMdu parxkAra; shiSayxna vAmakara\-piVThadalilx iSaTxliMgavanunx sAthxpisuva saMsAkxra; I diVkeSxyiMda shiSayxna sUthxlashariVragatavAda kAmiRkamalavu nAshavAgutatxde. maMTapa, deVvatAdi parxtiSAThxpUvaRka kirxyAparxdhAna diVkeSx:}}
 \smallskip
 \begin{shl}
 shiSayxpANitaleV datAtx yA diVkASx sA kirxyA BaveVtf |
@@ -17604,6 +17620,7 @@ kuMDamaMDalikoVpeVtA kirxyAdiVkASx kirxyoVtatxrA |
 \end{shl}
 \smallskip
 \pauthor{(si.shi., 6. 14)}
+\smallskip
 %\newmeaning{\ullekha{ayAyx, shirxVviBUtiya... kirxyAdiVkASxnivxtarAda upAdhiBakatxru.. (savasaM. 3; cenanxba. 932-295); niHkaLaMka shirxVguruvina... veVdhAmaMtarxkirxyAdiVkASxnivxta viVrasheYva BakatxmaheVshavxraru.. (savasaM. 14; mUrusA. 18-18).}}
 %\end{entry}
 %\begin{entry}
@@ -17611,6 +17628,16 @@ kuMDamaMDalikoVpeVtA kirxyAdiVkASx kirxyoVtatxrA |
 %\meaning{\artha{liMgadiVkeSxya samayadalilx mADuva diVkeSxgaLalilx oMdu. kirxyeyeMdare AcAra. Bakatxnu viVrasheYvanAda meVle yAva riVtiya pUjegaLanunx mADabeVkeMbudanunx guruvu A samayadalilx heVLikoDutAtxne. I AcAragaLelAlx hecAcxgi deYhika kirxyegaLanenx oLagoLuLxvudariMda, kirxyAdiVkeSxyanunx kAyakekx (kAyakAkxgi) upadeVsha mADalAgutatxde.}}
 %\meaning{\arthanonum{kirxyAdiVkeSx, maMtarxdiVkeSx matutx veVdhAdiVkeSx eMba mUru parxkArada diVkeSxgaLalilx oMdu; guruvu shiSayxnige kAyakekx saMbaMdhisida upadeVshagaLanunx vidhuyxkatxvAgi niVDuvudu.}
 \newmeaning{\ullekha{ayayx! pUvaRvanaLidu... veVdhA-maMtarx-kirxyAdiVkeSxya paDedu, aSATxvaraNada nelekalegaLa... (savasaM. 2; alalxma. 800-230); kirxyAdiVkeSxhiVnarige maMtorxVpadeVshava heVLuvanobabx liMga\-dorxVhi noVDA! (savasaM. 3; cenanxba. 1136-387); munanxveV parishudadhxvaDedidaR liMgasathxlavanAcAyaRM tananx vAmakarasathxlakekx bijayaMgeYsikoMDu baLikakxda\char'273\char'311\char'261LA pUvoRVkatx karxmadiM daqSiTx\-sithxta shivakalAparxtiSeThxyaM mADi matatxmA shiSayxna ...vAmahasatx\-piVThadoLA shivaliMgamaM goVmuKa vAmaBAgamapapxMte sAthxpisuvudu kirxyAdiVkeSxyenisikoMbudu (viveVka. 101).}}
+\smallskip
+\newmeaning{\artha{AjAcnx, upamA, kalashABiSeVka, savxsitxkAroVhaNa, BUtipaTaTx, Ayatatx matutx sAvxyatatx eMdu kirxyAdiVkeSxyu ELu vidhavAgide:}}
+\smallskip
+\begin{shl}
+AjocnxVpamA ca kalasheYraBiSeVkasatxtaH paramf |\\
+savxsitxkAroVhaNaM BUtipaTaTxmAyatatxmeVva ca |\\
+sAvxyatatxmiti sapetxYtAH kirxyAdiVkASxMtarA matAH ||
+\end{shl}
+\medskip
+\pauthor{(caM.A., kirx.pA., 9. 12; kA.A., kirx.pA., 1.43)}
 \vskip 2pt
 \newmeaning{\ni{kirxyAparxdhAnA diVkASx - kirxyAdiVkASx}}
 \end{entry}
@@ -22546,11 +22573,59 @@ shiveYkaniSAThxmanasoV BakAtxsetxV coVtatxmoVtatxmAH ||
 \end{entry}
 
 \begin{entry}
+\word{catuviRdhamala}
+\src{saM}
+\meaning{\arthanonum{ANava, mAyiVya, kAmiRka, beYMdava eMdu malavu nAlukx vidha. mAyiVyamalavu kalAtatatxvXdiMda paqthi\-vayxMtavAda BuvanAdi savxrUpavuLaLxdudx. joyxVtiSoTxVma-barxhamxhatAyxdigaLiMda janisi apUvaRveMba hesaranunx paDeda saMsAkxra\-visheVSavu kamaR athavA kAmiRka baMdhavAgide. idu puyaRSaTxkadoLagina budidhxtatatxvXvanAnxsharxyisi suKa-duHKa-moVhagaLeMba PalagaLiMda kUDide. jiVvAtamxru beVre beVre rUpavAdAga ANavaveMba maladiMda AvaqtarAgutAtxre. idu jAcnxna-kirxyegaLanunx Avarisidudx jaDavU, \hbox{nitayxvU}, vAyxpakavU Agide. videyx, avideyx, IshavxrAdi shariVragaLa kAraNavU, sUkaSxmXdiMda veYKariyavaregina kAraNavU Adadudx beYMdava. I nAlukx bageya baMdhanagaLige mAyeyeV kAraNa. shudAdhxdhavxrige (shudadhxmAgaRdavarige) beYMdavapAshavuMTAdare, mishArxdhavxdavarige (misharxmAgaRdavarige) kAmiRka matutx ANavapAshagaLive. mAyiVya malavu ashudAdhxdhavxvatiRgaLige (ashudadhxmAgaRdavarige) aMTikoLuLxtatxde. beYMdava matutx mAyiVyapAsha\-gaLu AgaMtuka\-gaLu (naDuve baruvaMtahavu). ANavamalavu anAdi. adu maheVshavxrAnugarxhadiMda, sheYva\-diVkeSx\-yiMda kamARMtadalilx mAtarx nAshavAguvaMtahadudx. kAmaR\-malavu cidfjAcnxnayoVga saMnAyxsadiMda nAshavAguvaMtahadudx:}}
+\smallskip
+\begin{shl}
+mAyeVyamANavaM kAmaRM beYMdavaM ca catuSaTxyamf |\\
+pAshAnAM kAraNiVBUtA teVSu baMdheVSu yA punaH ||\\
+kalAdikapaqthivayxMtaBuvanAdisavxrUpavAnf ||\\
+baMdhoV mAyiVyasaMjacnxsutx vidavxdiBxH parikiVtiRtaH |\\
+joyxVtiSoTxVmabarxhamxhatAyxduyxtapxnonxV{\char'263}pUvaRsaMjacnxkaH ||\\
+saMsAkxraH kamaRshabedxVna baMdhoV{\char'263}nayxH parikiVtayxRteV |\\
+puyaRSaTxkAMtaragataM budidhxtatatxvXmupAshirxtaH ||\\
+suKaduHKavimoVhAdiPalayukatxshacx jAyateV |\\
+baMdhoV malABidhAnasutx savxrUpANAyxtamxnAM paqthakf ||\\
+jAcnxnakirxyAM ca satataM samAvaqtayx vayxvasithxtaH |\\
+nitayxshacx vAyxpakashecxYva BaveVdapi jaDAtamxkaH ||\\
+vidAyxvideyxVshavxrAdiVnAM shAriVrANAM ca kAraNamf |\\
+sUkASxmXdiveYKayaRMtasayx kAraNaM beYMdavABidhaH ||\\
+shudAdhxdhavxvatiRnAM biMduroVdhw pAshAvuBw matw ||\\
+mishArxdhavxvatiRnAmukwtx dwvx dwvx kAmARNavABidhw |\\
+EvameVtadidhx badAdhxnAM catuSaTxyamudAhaqtamf ||
+\end{shl}
+\begin{shl}
+mishArxdhavxvAsiloVkAnAM savaRha? (ga)tevxV ca satayxpi ||\\
+suKaM duHKaM ca moVhashacx misharxmeVva parxvataRteV |\\
+ashudadhxyXdhavxsithxtAnAM tu kiMcijfjacnxtAvxlapxkataRqkeV ||\\
+suKaM duHKaM ca moVhashecxVtayxmiV taterxYva saMti hi |\\
+ata Eva savxyaM tajfjecnxYrashudAdhxdhevxVti giVyateV ||
+\end{shl}
+\medskip
+\pauthor{(shi. ta. ra., 9. 3. 93-106)}
+\end{entry}
+
+%\begin{entry}
+%\word{catuviRdhamukitx}
+%\src{va}
+%\meaning{\arthanonum{= catuviRdhapada:}
+%\ullekha{sAloVkayx sAmiVpayx {sArUpayx} sAyujayxveMba catuviRdhamukitxya bayasade ...SaDu\-cakarxMgaLaM BeVdisi (savasaM. 3; cenanxba. 997-317).}}
+%\vskip 2pt
+%\end{entry}
+
+\begin{entry}
 \word{catuviRdhamukitx}
-\src{va}
-\meaning{\arthanonum{= catuviRdhapada:}
-\ullekha{sAloVkayx sAmiVpayx {sArUpayx} sAyujayxveMba catuviRdhamukitxya bayasade ...SaDu\-cakarxMgaLaM BeVdisi (savasaM. 3; cenanxba. 997-317).}}
-\vskip 2pt
+\meaning{\artha{pArxNigaLalilx daye, shivanalilx Bakitx, elelxDe shivadashaRna matutx sadA shivaliMgadhAraNe:}}
+\medskip
+\begin{shl}
+dayA BUteVSu madaBxkitxH savaRtarx mama dashaRnamf ||\\[1pt]
+malilxMgadhAraNaM nitayxM mukitxreVSA catuviRdhA ||
+\end{shl}
+\medskip
+\pauthor{(pAra. A., 2. 31-32)}
+\newmeaning{\artha{sAloVkayx, sAmiVpayx, sArUpayx matutx sAyujayx:}
+\ullekha{sAloVkayx sAmiVpayx sArUpayx sAyujayxveMba catuviRdha {mukitxya} bayasade (savasaM. 3; cenanxba. 720-217).}}
 \newmeaning{\ni{catuviRdhA ca asw mukitxshacx - catuviRdhamukitxH}}
 \end{entry}
 
@@ -22685,20 +22760,6 @@ pUjayeVtf tatapxrXsAdAnanxM BuMjiVyAtf parxtivAsaramf ||
 %\newmeaning{\ni{catuviRdha PalapadaM, catuviRdhAnAM PalAnAM padaM - catuviRdhaPalapadaM}}
 %\end{entry}
 
-
-\begin{entry}
-\word{catuviRdhamukitx}
-\meaning{\artha{pArxNigaLalilx daye, shivanalilx Bakitx, elelxDe shivadashaRna matutx sadA shivaliMgadhAraNe:}}
-\medskip
-\begin{shl}
-dayA BUteVSu madaBxkitxH savaRtarx mama dashaRnamf ||\\[1pt]
-malilxMgadhAraNaM nitayxM mukitxreVSA catuviRdhA ||
-\end{shl}
-\medskip
-\pauthor{(pAra. A., 2. 31-32)}
-\newmeaning{\artha{sAloVkayx, sAmiVpayx, sArUpayx matutx sAyujayx:}
-\ullekha{sAloVkayx sAmiVpayx sArUpayx sAyujayxveMba catuviRdha {mukitxya} bayasade (savasaM. 3; cenanxba. 720-217).}}
-\end{entry}
 
 %\begin{entry}
 %\word{catuviRdhasaMpananx}
@@ -27601,7 +27662,7 @@ diVkASx jAcnxnavatiV porxVkAtx samayxkftatAtxvXvaboVdhikA |
 \begin{entry}
 \word{jAcnxnavAru}
 \src{va}
-\meaning{\arthanonum{matijAcnxna, shurxtijAcnxna, KaMDajAcnxna, keVvalajAcnxna, joyxVtijAcnxRna, mahAjoyxVtijAcnxRna eMba Aru bageya jAcnxnagaLu. ivugaLu karxmavAgi Bakatxsathxla, mAheVshavxrasathxla, parxsAdisathxla, pArxNaliMgisathxla, sharaNasathxla, aikayxsathxlagaLige saMbaMdhisive.}}
+\meaning{\arthanonum{matijAcnxna, shurxtijAcnxna, KaMDajAcnxna, keVvalajAcnxna, joyxVtijAcnxRna, mahAjoyxVtijAcnxRna eMba Aru bageya jAcnxnagaLu. ivugaLu karxmavAgi Bakatxsathxla, mAheVshavxrasathxla, parxsAdisathxla, pArxNaliMgisathxla, sharaNasathxla, aikayxsathxlagaLige saMbaMdhisive:} \ullekha{matijAcnxna, shurxtijAcnxna, KaMDajAcnxna, keVvalajAcnxna, joyxVtijAcnxRna, mahAjoyxVtijAcnxRnaveMdiMtu jAcnxnavAduteranu. matijAcnxnadiMda shurxtijAcnxnavahudu, shurxtijAcnxnadiMda KaMDajAcnxnavahudu, KaMDajAcnxnadiMda keVvalajAcnxnavahudu, keVvalajAcnxnadiMda joyxVtijArxcnXnavahudu joyxVtijArxcnXnadiMda mahAjoyxVtijArxcnXnavahudu. matijAcnxnaveV Bakatx, shurxtijAcnxnaveV maheVshavxra, KaMDajAcnxnaveV parxsAdi, keVvalajAcnxnaveV pArxNaliMgi, joyxVtijArxcnXnaveV sharaNa, mahAjoyxVtijArxcnXnaveV aikayx (savasaM. 3; cenanxba. 1445-426).}}
 \end{entry}
 
 %\begin{entry}
