--- a/tex-for-print/anubandha-3.tex
+++ b/tex-for-print/anubandha-3.tex
@@ -4,10 +4,14 @@
 \rhead[]{}
 
 \begin{center}
-{\Large\bf padakoVshakekx baLasalAda kaqtigaLa saMkiSxpatx sUci}
+{\huge\bf padakoVshakekx baLasalAda kaqtigaLa saMkiSxpatx sUci}
 \end{center}
 
 \medskip
+
+\begin{center}
+{\large\bf (1) saMsakxqqta kaqtigaLa saMkiSxpatx sUci}
+\end{center}
 
 {
 \setlength{\columnseprule}{1pt} 
@@ -192,11 +196,143 @@ ha.koV. \> halAyudhakoVshaH
 }
 
 
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rp{6cm}cp{9cm}<{\raggedright}}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+1. & anAdiviVrasheYvasArasaMgarxha : (BA-1)\newline (kananxDa vAyxKAyx sahita) &-& saMpAdaneya sidadhxviVraNaNx shivayoVgi. saM. ji.e. shivaliMgayayx, basava samiti, beMgaLUru, 1999\\
+2. & anAdivivrasheYvasArasaMgarxha : (BA-1) &-& saM. maNUra maThAdhayxkaSx malilxkAjuRnashAsitxrXV, viVrasheYva liMgibArxhamxNa garxMthamAlA, soVlApura, 1905\\
+3. & anAdiviVrasheYvasArasaMgarxha (BA-2)\newline (kananxDa vAyxKAyx sahita) &-& parxdhAna saMpAdaka. DA|| si. shivakumArasAvxmi, viVrasheYva sAhitayx parxtiSAThxna, viBUtipura maTha, beMgaLUru, 2005\\
+4. & anuBavasUtarx (mAyideVva)\newline (hiMdiV vAyxKAyx sahita) &-& saM. varxjavalalxBadivxveVdiV, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1998\\
+5. & anuBavasUtarx (mAyideVva)\newline (kananxDAnuvAda sahita) &-& saM. DA|| si. shivakumArasAvxmi, viVrasheYva anusaMdhAna saMsAThxna, beMgaLUru, 2003\\
+6. & amarakoVsha (amarasiMha)\newline (sudhA vAyxKoyxVpeVtaH) &-& (vAyx) shirxV BAnUji diVkiSxta, cwKAMbA saMsakxqqta parxtiSAThxna, nava dehali (divxtiVya mudarxNa), 1978\\
+7. & AtAmxpaRNasutxti (apapxyayx diVkiSxta)\newline (bAlaboVdhiniV vAyxKAyx sahita) &-& (vAyx) shirxV shivAnaMdayati, shirxVmadapapxyayx diVkiSxta garxMthAvali parxkAshana samiti, sikaMdarAbAdf, 1980\\
+8. & athavaRshiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVshashAsitxrXV, moVtilAla banArasiVdAsf, dehali, 1980\\
+9. & athavaRshiroVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+10. & aBijAcnxna shAkuMtala (kAlidAsa)\newline (kananxDAnuvAda sahita) &-& saM. porx. ke.Ti. pAMDuraMgi, beMgaLUru vishavxvidAyxlaya, beMgaLUru, 1978\\
+11. & aSATxdhAyxyiV sUtarxpATha\newline (pANini) &-& saM. sAvxmiV parxhAlxdagiriveVdAMtakeVsari, kaqSaNxdAsa akAdemi, dehali, (divxtiVya mudarxNa), 1987\\
+12. & amaqtabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+13. & akaSxmAlikoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+14. & IshAvAsoyxVpaniSatf &-& rAmakaqSaNxmaTha, madArxsf, 1948\\
+15. & upaniSadAvxkayxmahAkoVSaH &-& shirxV gajAnanashaMBu sAdhale, cwKAMbA vidAyxBavana, vAraNAsi, 1990\\
+16. & upaniSatasxMgarxhaH &-& saM. paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+17. & QugevxVda &-& veYdika saMshoVdhana maMDali, puNe\\
+18. & aitareVyoVpaniSatf &-& shirxVrAmakaqSANxsharxma, meYsUru, 1954 (nAlakxneya mudarxNa, 1984)\\
+19. & kaThoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+20. & kAraNAgama (kirxyApAda)\newline (hiMdiVBASAnuvAda sahita) &-& saM. porx. rAmacaMdarxpAMDeVya sheYva BAratiV shoVdha parxtiSAThxna, vArANasi, 1994\\
+21. & kAraNAgama (kirxyApAda)\newline (kananxDAnuvAda sahita) &-& DA|| malilxkAjuRna paraDiDx, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 1999\\
+22. & kAmikAgamaH\newline (shivAgama swraBAMtagaRta) &-& saM. vidAvxnf eM.ji. naMjuMDArAdhayx, ja.ca.ni. adhayxyana piVTha matutx saMshoVdhanA saMsethx, beMgaLUru, 1985\\
+23. & kAlAginxrudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+24. & kiraNAgamaH\newline (taMtarxsaMgarxhaH) &-& hUTagiVmaTha, soVlApura, 1914\\
+25. & keVnoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVshashAsitxrXV. moVtilAla banAsaridAsf, dehali, 1980\\
+26. & keYvalayxsAraH\newline (maritoVMTadAyaR) &-& pArxcayx vidAyx saMshoVdhanAlayaH, meYsUru, 1988\\
+27. & keYvaloyxVpaniSatf\newline (sadAshivaBASoyxVpeVta) &-& shirxV sadAshiva shivAcAyaRH, parxboVdha pusatxka mAlA, beMgaLUru, 1951\\
+28. & kirxyAsAra (niVlakaMThashivAcAyaR)\newline (BA-1, 2, 3) &-& pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1954, 1957, 1958\\
+29. & caMdarxjAcnxnAgama\newline (kirxyApAda-cayARpAda)\newline (AMgalxBASAnuvAda sahita) &-& saM. DA. ramAGoVSf, sheYva BArati shoVdha parxtiSAThxna, vArANasi, 1995\\
+30. & caMdarxjAcnxnAgama\newline (kirxyApAda-cayARpAda)\newline (kananxDAnuvAda sahita) &-& saM. DA|| eM. shivakumArasAvxmi, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2002\\
+31. & CAMdoVgoyxVpaniSatf &-& sAvxmi AdideVvAnaMda shirxV rAmakaqSANxsharxma, meYsUru, 1995\\
+32. & jAbAluyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+33. & teVjoVbiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+34. & tatatxrXparxkAshikA (aGoVrashivAcAyaR)\newline (BoVjakaqtavAyxKAyxna) &-& vidAvxnf. bi. rAjasheVKarayayx, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2010\\
+35. & teYtitxriVyoVpaniSatf &-& sAvxmi AdideVvAnaMda, shirxVrAmakaqSANxsharxma, meYsUru, 1993\\
+36. & dakiSxNAmUtuRyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+37. & deVviVkAloVtatxrAgamaH &-& (saM) varxjavalalxBadivxveVdi, sheYva BArati shoVdha parxtiSAThxna, vArANasi, 2000\\
+38. & nAdabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+39. & nirukatxmf (yAsakx)\newline (niGaMTu sahita) &-& DA|| lakaSxmXNasavxrUpa, moVtilAla banArasidAsf, dehali, 1984\\
+40. & niVlarudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+41. & paMcabarxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+42. & paMDitArAdhayx caritamf (gururAjakavi)\newline (kananxDAnuvAda sahita) &-& (saM) enf. Arf. karibasavashAsitxrXV, viVrasheYva garxMtha parxkAshikA, meYsUru, BAga-1 (1908), BAga-2 (1913)\\
+43. & pArameVshavxrAgama\newline (hiMdiV BASAnuvAda sahita) &-& (saM) paM. varxjavalalxBadivxveVdi, sheYva BArati shoVdha parxtiSAThxna, vArANasi, 1995\\
+44. & pArameVshavxrAgama\newline (kananxDAnuvAda sahita) &-& (saM) DA|| eM. shivakumArasAvxmi, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2000\\
+45. & pAshupatAgama\newline (shivAgamaswraBa) &-& vidAvxnf eM. ji. naMjuMDArAdhayx, shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1986\\
+46. & peYMgaloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+47. & pwSakxrAgama\newline (sidAdhxMtasheVKara) &-& porx. siVtarAma soVmayAji, meYsUru, 1901\\
+48. & parxtayxBijAcnxhaqdayamf &-& kAshimxVra saMsakxqqta garxMthAvali, shirxVnagara, 1911\\
+49. & parxshonxVpaniSatf &-& sAvxmi AdideVvAnaMda, shirxVrAmakaqSaNxmaTha, meYsUru, 1993\\
+50. & parxsAdajAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsa, dehali, 1980\\
+51. & parxBugiVtA (mAyideVva) &-& (saM) porx. si. mahAdeVvapapx, saMshoVdhanAkoVTi, beMgaLUru, 2001\\
+52. & baqhadAraNayxkoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+53. & baqhajAjxbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+54. & barxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+55. & BagavadigxVtA &-& giVtA perxsf, goVraKapurf, 2008\\
+56. & BagavadigxVtA viVrasheYvaBASayx &-& DA|| Ti.ji. sidadhxpApxrAdhayx, baqhanamxTha, citarxdugaR, 1935\\
+57. & BAratiVyadashaRna pariBASAkoVsha\newline (BA-1) &-& veYjAcnxnika matutx tAMtirxka shabAdxvaliV AyoVga, BArata sakARra, navadehali, 1999\\
+58. & makuTAgama (kirxyApAda-cayARpAda)\newline (hiMdiV BASAnuvAda sahita) &-& (saM) paM. varxjavalalxBadivxveVdi, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1995\\
+59. & makuTAgama (kirxyApAda-cayARpAda)\newline (kananxDAnuvAda sahita) &-& (saM) DA|| si. shivakumArasAvxmi, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 1998\\
+60. & mahAnArAyaNoVpaniSatf\newline (sheYvaBASayx sahita) &-& BASayxkAra. shirxVvaqSaBeVMdarx paMDita shivAcAyaR, vishAvxrAdhayx gurukula, kAshiV, 1959\\
+61. & mahoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsa, dehali, 1980\\
+62. & mAMDUkoyxVpaniSatf\newline (gwDapAdakArikoVpeVtA) &-& sAvxmi AdideVvAnaMda, shirxVrAmakaqSANxsharxma, meYsUru, 1984\\
+63. & muMDakoVpaniSatf &-& sAvxmi AdideVvAnaMda, shirxVrAmakaqSANxsharxma, meYsUru, 1957\\
+64. & maqgeVMdArxgama\newline (shivAgama swraBAMtagaRta) &-& vidAvxnf eM.ji. naMjuMDArAdhayx, shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1985\\
+65. & meYterxVyoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+66. & meYterxVyuyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+67. & yoVgashiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+68. & raGuvaMsha (kAlidAsa) &-& niNaRyasAgara perxsf, muMbayi, 1932\\
+69. & rudArxkaSxjAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+70. & rudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+71. & rudarxhaqdayoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+72. & liMgadhAraNacaMdirxkA\newline (naMdikeVshavxra shivAcAyaR) &-& paM. varxjavalalxBadivxveVdi, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1988\\
+73. & liMgoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+74. & vAtulAgama\newline (shivAgamaswraBa) &-& vidAvxnf eM.ji. naMjuMDArAdhayx, shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1986\\
+75. & visheVSAthaR parxkAshikA (mAyideVva)\newline (kananxDAnuvAda sahita) &-& (saM) paM. veY. nAgeVshashAsitxrX, shirxV muruGAmaTha, dhAravADa, 1961\\
+76. & viVramAheVshavxrAcAra saMgarxha : (BA-1)\newline (niVlakaMThanAganAthAcAyaR viracita) &-& (saM.) eM. esf. basavarAjayayx, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1991\\
+77. & viVrasheYvadhamaR shiroVmaNi\newline (kananxDa vAyxKAyx sahita) &-& (vAyx) eM. basavaliMgashAsitxrX, viVrasheYvagarxMtha parxkAshikA garxMthAvali, meYsUru, 1908\\
+78. & viVrasheYvasadAcAra saMgarxha &-& veV.mU. maNUra maThada malilxkAjuRna shAsitxrXV, liMgibArxhamxNa garxMthamAlA, soVlApura, 1905\\
+79. & viVrasheYva sadAcAra saMgarxha\newline (kananxDAnuvAda sahita) &-& (saM) paM. basavarAjashAsitxrXV pagaDadininx maTha, shirxV jagadugxru garxMtha parxkAshikA garxMthAvali, mUrusAvira maTha, hubabxLiLx, 1964\\
+80. & viVrasheYvAnaMdacaMdirxkA (vAdakAMDa)\newline (maritoVMTadAyaR) &-& (saM) shirxV soVmeVshavxrashAsitxrXV, shirxV jagadugxru gaMgAdhara saMsakxqqta mahApAThashAlA, hubabxLiLx, 1936\\
+81. & viVrasheYvoVtakxSaRparxdiVpikA &-& hAlapaTaTxNada cenanxbasavasAvxmi, shirxV duraduMDeVshavxramaTha, arabAvi, beLagAvi jilelx, 1936\\
+82. & viVrasheYva parxdiVpikA &-& shirxV jayacAmarAjeVMdarx garxMthamAlA, meYsUru, 1918\\
+83. & viVrasheYvapAriBASika padakoVsha (kananxDa) &-& DA|| esf. vidAyxshaMkarf, porx. bi. virUpAkaSxpapx, basava samiti, beMgaLUru, 2000\\
+84. & viVrAgamoVtatxramf (BA-1) &-& (saM) DA|| ecf. pi. malelxVdeVvaru, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1988\\
+85. & viVrAgama (kananxDa vAyxKAyxna sahita) &-& (saM) DA|| ja.ca.ni. shirxV jagadugxru paMcAcAyaR seVvA saMGa, gadaga-beTageVri, 1962\\
+86. & viVrasheYvoVpaniSatf &-& paM. kAshiVnAthashAsitxrXV, paMcAcAyaR perxsf, meYsUru, 1981 (ELaneya Avaqtitx)\\
+87. & veVdAMtasAraviVrasheYva ciMtAmaNi\newline (utatxrakAMDa) - (niTUTxru naMjaNAyaR) (marAThi anuvAda sahita) &-& (saM) shirxV malilxkAjuRnashAsitxrXV, shirxV datatx parxsAda siTxVmf perxsf, soVlApura, 1908\\
+88. & veYdika shivapUjA vidhi &-& paM. kAshiVnAthashAsitxrXV, paMcAcAyaR mudarxNAlaya, meYsUru, 1980 (eMTaneya Avaqtitx)\\
+89. & shatakatarxyamf (mAyideVva) &-& paM. veY. nAgeVshashAsitxrXV, muruGamaTha, dhAravADa, 1964\\
+90. & sharaBoVpaniSatf\newline (upaniSatasxMgarxha) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasiVdAsf, dehali, 1970\\
+91. & shabAdxthaR kwsutxBa\newline (saMsakxqqta-kananxDa niGaMTu) (BAga 1-6) &-& cakarxvatiR shirxVnivAsa rAjagoVpAlAcAyaR, bApokxV parxkAshana, beMgaLUru, 1999\\
+92. & shakitxvishiSATxdevxYta dashaRnamf &-& DA|| Ti.ji. sidadhxpApxrAdhayx, gubibx shirxV cenanxbasaveVshavxra garxMthamAlA, meYsUru, 1934\\
+93. & shakitxvishiSATxdevxYta tatatxvXtarxya vimashaRH\newline (saMsakxqqta) &-& DA|| caMdarxsheVKara shivAcAyaR mahAsAvxmigaLavaru, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1996\\
+94. & shakitxvishiSATxdevxYta tatatxvXtarxya vimasheR\newline (kananxDAnuvAda) &-& DA|| si. shivakumArasAvxmi, rAjayx patArxgAra ilAKe, (kanARTaka sakARra), beMgaLUru, 2009\\
+95. & shivatatatxvXratAnxkara\newline (keLadi basavaBUpAla) &-& pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, BAga-1 (1964), BAga-2 (1969), BAga-3 (1975)\\
+96. & shivatatatxvXratAnxkara\newline (kananxDAnuvAda sahita) &-& (saM) porx. malelxVpurA ji. veMkaTeVshf, kananxDa vishavxvidAyxlaya, haMpi, 1999\\
+97. & shivayoVga parxdiVpikA (cenanxsadAshivayoVgi)\newline (kananxDA TiVkA sahita) &-& TiVkAkAra, basavArAdhayx, kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa, 1976\\
+98. & shivAdevxYtamaMjariV (savxparxBAnaMda shivAcAyaR)\newline (kananxDa vAyxKAyxna sahita) &-& shirxV rAmAnuja ayayxMgArf, paMcAcAyaR perxsf, meYsUru, 1929\\
+99. & shivAdhikayxshiKAmaNi (soVsale reVvaNArAdhayx) &-& (saM) shirxV soVmasheVKarasAvxmi, namaH shivAya maTha, meYsUru, 1929\\
+100. & shivAgamaswraBa (kananxDa) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx, shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1985\\
+101. & shivAnuBavashabadxkoVsha (kananxDa) &-& Pa.gu. haLakaTiTx, samAja pusatxkAlaya, dhAravADa, 1962\\
+102. & sheYvadashaRna itihAsa matutx tatatxvXparxkAsha\newline (BoVjarAja viracita) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx, parxboVdha garxMthamAlA, meYsUru, 1974\\
+103. & sheYvoVpaniSatf\newline {\rm (SAIVOPANISADS)} &-& (saM) paM. mahAdeVvashAsitxrXV, aDAyxrf leYbarxri, madArxsf, 1925\\
+104. & sheYvapariBASA\newline (shivAgarxyoVgiVMdarxjAcnxnashivAcAyaR) &-& (saM) ecf.Arf. raMgasAvxmi ayayxMgArf, sakARri mudarxNAlaya, meYsUru, 1950\\
+105. & sheYvaratAnxkara (joyxVtinARtha) (BAga-1) &-& (saM) DA|| si.enf. basavarAju, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1992\\
+106. & sheYvaratAnxkara (joyxVtinARtha) (BAga-2) &-& (saM) malilxkAjuRna shAsitxrXV, liMgibArxhamxNa garxMthamAlA, soVlApura, 1909\\
+107. & sheYvasidAdhxMtadiVpikA\newline (mAheVshavxra) &-& (saM) pi.Arf. karibasavashAsitxrXV, shaMkara vilAsa perxsf, meYsUru, 1907\\
+108. & shurxtisAraBASayx\newline (shirxV shivapUjAshivaliMgashivayoVgiVMdarx) &-& (saM) DA|| Ti.ji. sidadhxpApxrAdhayx, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1913\\
+109. & shirxVkaraBASayx (shirxVpati paMDita) &-& (saM) DA|| Ti.ji. sidadhxpApxrAdhayx, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru (BAga-1, 1977), (BAga-2, 1978)\\
+110. & shevxVtAshavxtaroVpaniSatf\newline (viVrasheYvaBASoyxVpeVtA) &-& DA|| Ti.ji. sidadhxpApxrAdhayx, shirxV muruGAmaTha, citarxdugaR, 1965\\
+111. & sadAnaMdoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+112. & savaRdashaRnasaMgarxha\newline (mAdhavAcAyaR) &-& (saM) DA|| imamxDi shivabasavasAvxmigaLu, kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa, 1976\\
+113. & savAyxKAyxpaMcasholxVkiV\newline (keLadi basavarAja) &-& (saM) basavaliMgashAsitxrXV, enf.Arf. karibasavashAsitxrXV, meYsUru, 1912\\
+114. & sidAdhxMta shiKAmaNi\newline (shivayoVgi shivAcAyaR) &-& (saM) DA|| caMdarxsheVKara shivAcAyaR mahAsAvxmigaLu, viVrasheYva sAhitayx saMshoVdhana maMDaLa, soVlApura, 1990\\
+115. & sidAdhxMta shiKAmaNi (tatatxvX parxdiVpikA sahita)\newline (AMgAlxnuvAda - TipapxNi sahita) &-& DA|| eM. shivakumArasAvxmi, sheYvaBArati shoVdha parxtiSAThxnamf, vArANasi, 1907\\
+116. & sidAdhxMta shiKAmaNi\newline (soVsale reVvaNarAdhayxra sidAdhxMta boVdhiniV sahita) &-& (saM.) Di. sidadhxgaMgayayx, vijaya parxkAshana, lakekxVnahaLiLx, tumakUru, 2004\\
+117. & sUkASxmXgama (hiMdiV anuvAda) &-& (saM) paM. varxjavalalxBadivxveVdi, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1994\\
+118. & sUkASxmXgama (kananxDAnuvAda) &-& SaNumxKayayx akUkxramaTha, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2001\\
+\hline
+\end{longtable}}
+
+
 \vskip 1cm
 
 \begin{center}
-{\Large\bf vacana garxMthagaLa saMkiSxpatx sUci}
+{\large\bf (2) vacana garxMthagaLa saMkiSxpatx sUci}
 \end{center}
+
 
 \centerline{\bf ``a''}
 
@@ -364,7 +500,7 @@ ha.koV. \> halAyudhakoVshaH
 41. &  kadike - savasaM &  kadiremamxvevxya vacanagaLu & samagarx saMpuTa - 5 & --\\
 42. &  kananxDi - savasaM & kananxDi kAyakada reVmamamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
 43. &  kananxDi - savasaM & kananxDi kAyakada amimxdeVvayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
-44. &  kananxre - savasaM & kananxDi kAyakada reVmamaxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+44. &  kananxre - savasaM & kananxDi kAyakada reVmamamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
 45. &  kananxda - savasaM & kananxda mAri taMdeya vacanagaLu & samagarx saMpuTa - 7 & --\\
 46. &  karukeV - savasaM & karuLa keVtayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
 47. &  kalakeV - savasaM & kalakeVtayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
@@ -593,143 +729,11 @@ ha.koV. \> halAyudhakoVshaH
 \hline
 \end{longtable}}
 
-
-\begin{center}
-{\Large\bf Akara garxMthasUciV}
-\end{center}
-
-{\renewcommand{\arraystretch}{1.3}
-\begin{longtable}{rp{6cm}cp{9cm}<{\raggedright}}
-\hline
-\endfirsthead
-\hline
-\endhead
-\hline
-\endfoot
-\endlastfoot
-1. & anAdiviVrasheYvasArasaMgarxha : (BA-1)\newline (kananxDa vAyxKAyx sahita) &-& saMpAdaneya sidadhxviVraNaNx shivayoVgi. saM. ji.e. shivaliMgayayx, basava samiti, beMgaLUru, 1999\\
-2. & anAdivivrasheYvasArasaMgarxha : (BA-1) &-& saM. maNUra maThAdhayxkaSx malilxkAjuRnashAsitxrXV, viVrasheYva liMgibArxhamxNa garxMthamAlA, soVlApura, 1905\\
-3. & anAdiviVrasheYvasArasaMgarxha (BA-2)\newline (kananxDa vAyxKAyx sahita) &-& parxdhAna saMpAdaka. DA|| si. shivakumArasAvxmi, viVrasheYva sAhitayx parxtiSAThxna, viBUtipura maTha, beMgaLUru, 2005\\
-4. & anuBavasUtarx (mAyideVva)\newline (hiMdiV vAyxKAyx sahita) &-& saM. varxjavalalxBadivxveVdiV, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1998\\
-5. & anuBavasUtarx (mAyideVva)\newline (kananxDAnuvAda sahita) &-& saM. DA|| si. shivakumArasAvxmi, viVrasheYva anusaMdhAna saMsAThxna, beMgaLUru, 2003\\
-6. & amarakoVsha (amarasiMha)\newline (sudhA vAyxKoyxVpeVtaH) &-& (vAyx) shirxV BAnUji diVkiSxta, cwKAMbA saMsakxqqta parxtiSAThxna, nava dehali (divxtiVya mudarxNa), 1978\\
-7. & AtAmxpaRNasutxti (apapxyayx diVkiSxta)\newline (bAlaboVdhiniV vAyxKAyx sahita) &-& (vAyx) shirxV shivAnaMdayati, shirxVmadapapxyayx diVkiSxta garxMthAvali parxkAshana samiti, sikaMdarAbAdf, 1980\\
-8. & athavaRshiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVshashAsitxrXV, moVtilAla banArasiVdAsf, dehali, 1980\\
-9. & athavaRshiroVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-10. & aBijAcnxna shAkuMtala (kAlidAsa)\newline (kananxDAnuvAda sahita) &-& saM. porx. ke.Ti. pAMDuraMgi, beMgaLUru vishavxvidAyxlaya, beMgaLUru, 1978\\
-11. & aSATxdhAyxyiV sUtarxpATha\newline (pANini) &-& saM. sAvxmiV parxhAlxdagiriveVdAMtakeVsari, kaqSaNxdAsa akAdemi, dehali, (divxtiVya mudarxNa), 1987\\
-12. & amaqtabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-13. & akaSxmAlikoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-14. & IshAvAsoyxVpaniSatf &-& rAmakaqSaNxmaTha, madArxsf, 1948\\
-15. & upaniSadAvxkayxmahAkoVSaH &-& shirxV gajAnanashaMBu sAdhale, cwKAMbA vidAyxBavana, vAraNAsi, 1990\\
-16. & upaniSatasxMgarxhaH &-& saM. paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-17. & QugevxVda &-& veYdika saMshoVdhana maMDali, puNe\\
-18. & aitareVyoVpaniSatf &-& shirxVrAmakaqSANxsharxma, meYsUru, 1954 (nAlakxneya mudarxNa, 1984)\\
-19. & kaThoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-20. & kAraNAgama (kirxyApAda)\newline (hiMdiVBASAnuvAda sahita) &-& saM. porx. rAmacaMdarxpAMDeVya sheYva BAratiV shoVdha parxtiSAThxna, vArANasi, 1994\\
-21. & kAraNAgama (kirxyApAda)\newline (kananxDAnuvAda sahita) &-& DA|| malilxkAjuRna paraDiDx, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 1999\\
-22. & kAmikAgamaH\newline (shivAgama swraBAMtagaRta) &-& saM. vidAvxnf eM.ji. naMjuMDArAdhayx, ja.ca.ni. adhayxyana piVTha matutx saMshoVdhanA saMsethx, beMgaLUru, 1985\\
-23. & kAlAginxrudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-24. & kiraNAgamaH\newline (taMtarxsaMgarxhaH) &-& hUTagiVmaTha, soVlApura, 1914\\
-25. & keVnoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVshashAsitxrXV. moVtilAla banAsaridAsf, dehali, 1980\\
-26. & keYvalayxsAraH\newline (maritoVMTadAyaR) &-& pArxcayx vidAyx saMshoVdhanAlayaH, meYsUru, 1988\\
-27. & keYvaloyxVpaniSatf\newline (sadAshivaBASoyxVpeVta) &-& shirxV sadAshiva shivAcAyaRH, parxboVdha pusatxka mAlA, beMgaLUru, 1951\\
-28. & kirxyAsAra (niVlakaMThashivAcAyaR)\newline (BA-1, 2, 3) &-& pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1954, 1957, 1958\\
-29. & caMdarxjAcnxnAgama\newline (kirxyApAda-cayARpAda)\newline (AMgalxBASAnuvAda sahita) &-& saM. DA. ramAGoVSf, sheYva BArati shoVdha parxtiSAThxna, vArANasi, 1995\\
-30. & caMdarxjAcnxnAgama\newline (kirxyApAda-cayARpAda)\newline (kananxDAnuvAda sahita) &-& saM. DA|| eM. shivakumArasAvxmi, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2002\\
-31. & CAMdoVgoyxVpaniSatf &-& sAvxmi AdideVvAnaMda shirxV rAmakaqSANxsharxma, meYsUru, 1995\\
-32. & jAbAluyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-33. & teVjoVbiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-34. & tatatxrXparxkAshikA (aGoVrashivAcAyaR)\newline (BoVjakaqtavAyxKAyxna) &-& vidAvxnf. bi. rAjasheVKarayayx, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2010\\
-35. & teYtitxriVyoVpaniSatf &-& sAvxmi AdideVvAnaMda, shirxVrAmakaqSANxsharxma, meYsUru, 1993\\
-36. & dakiSxNAmUtuRyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-37. & deVviVkAloVtatxrAgamaH &-& (saM) varxjavalalxBadivxveVdi, sheYva BArati shoVdha parxtiSAThxna, vArANasi, 2000\\
-38. & nAdabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-39. & nirukatxmf (yAsakx)\newline (niGaMTu sahita) &-& DA|| lakaSxmXNasavxrUpa, moVtilAla banArasidAsf, dehali, 1984\\
-40. & niVlarudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-41. & paMcabarxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-42. & paMDitArAdhayx caritamf (gururAjakavi)\newline (kananxDAnuvAda sahita) &-& (saM) enf. Arf. karibasavashAsitxrXV, viVrasheYva garxMtha parxkAshikA, meYsUru, BAga-1 (1908), BAga-2 (1913)\\
-43. & pArameVshavxrAgama\newline (hiMdiV BASAnuvAda sahita) &-& (saM) paM. varxjavalalxBadivxveVdi, sheYva BArati shoVdha parxtiSAThxna, vArANasi, 1995\\
-44. & pArameVshavxrAgama\newline (kananxDAnuvAda sahita) &-& (saM) DA|| eM. shivakumArasAvxmi, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2000\\
-45. & pAshupatAgama\newline (shivAgamaswraBa) &-& vidAvxnf eM. ji. naMjuMDArAdhayx, shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1986\\
-46. & peYMgaloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-47. & pwSakxrAgama\newline (sidAdhxMtasheVKara) &-& porx. siVtarAma soVmayAji, meYsUru, 1901\\
-48. & parxtayxBijAcnxhaqdayamf &-& kAshimxVra saMsakxqqta garxMthAvali, shirxVnagara, 1911\\
-49. & parxshonxVpaniSatf &-& sAvxmi AdideVvAnaMda, shirxVrAmakaqSaNxmaTha, meYsUru, 1993\\
-50. & parxsAdajAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsa, dehali, 1980\\
-51. & parxBugiVtA (mAyideVva) &-& (saM) porx. si. mahAdeVvapapx, saMshoVdhanAkoVTi, beMgaLUru, 2001\\
-52. & baqhadAraNayxkoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-53. & baqhajAjxbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-54. & barxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-55. & BagavadigxVtA &-& giVtA perxsf, goVraKapurf, 2008\\
-56. & BagavadigxVtA viVrasheYvaBASayx &-& DA|| Ti.ji. sidadhxpApxrAdhayx, baqhanamxTha, citarxdugaR, 1935\\
-57. & BAratiVyadashaRna pariBASAkoVsha\newline (BA-1) &-& veYjAcnxnika matutx tAMtirxka shabAdxvaliV AyoVga, BArata sakARra, navadehali, 1999\\
-58. & makuTAgama (kirxyApAda-cayARpAda)\newline (hiMdiV BASAnuvAda sahita) &-& (saM) paM. varxjavalalxBadivxveVdi, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1995\\
-59. & makuTAgama (kirxyApAda-cayARpAda)\newline (kananxDAnuvAda sahita) &-& (saM) DA|| si. shivakumArasAvxmi, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 1998\\
-60. & mahAnArAyaNoVpaniSatf\newline (sheYvaBASayx sahita) &-& BASayxkAra. shirxVvaqSaBeVMdarx paMDita shivAcAyaR, vishAvxrAdhayx gurukula, kAshiV, 1959\\
-61. & mahoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsa, dehali, 1980\\
-62. & mAMDUkoyxVpaniSatf\newline (gwDapAdakArikoVpeVtA) &-& sAvxmi AdideVvAnaMda, shirxVrAmakaqSANxsharxma, meYsUru, 1984\\
-63. & muMDakoVpaniSatf &-& sAvxmi AdideVvAnaMda, shirxVrAmakaqSANxsharxma, meYsUru, 1957\\
-64. & maqgeVMdArxgama\newline (shivAgama swraBAMtagaRta) &-& vidAvxnf eM.ji. naMjuMDArAdhayx, shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1985\\
-65. & meYterxVyoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-66. & meYterxVyuyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-67. & yoVgashiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-68. & raGuvaMsha (kAlidAsa) &-& niNaRyasAgara perxsf, muMbayi, 1932\\
-69. & rudArxkaSxjAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-70. & rudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-71. & rudarxhaqdayoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-72. & liMgadhAraNacaMdirxkA\newline (naMdikeVshavxra shivAcAyaR) &-& paM. varxjavalalxBadivxveVdi, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1988\\
-73. & liMgoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-74. & vAtulAgama\newline (shivAgamaswraBa) &-& vidAvxnf eM.ji. naMjuMDArAdhayx, shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1986\\
-75. & visheVSAthaR parxkAshikA (mAyideVva)\newline (kananxDAnuvAda sahita) &-& (saM) paM. veY. nAgeVshashAsitxrX, shirxV muruGAmaTha, dhAravADa, 1961\\
-76. & viVramAheVshavxrAcAra saMgarxha : (BA-1)\newline (niVlakaMThanAganAthAcAyaR viracita) &-& (saM.) eM. esf. basavarAjayayx, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1991\\
-77. & viVrasheYvadhamaR shiroVmaNi\newline (kananxDa vAyxKAyx sahita) &-& (vAyx) eM. basavaliMgashAsitxrX, viVrasheYvagarxMtha parxkAshikA garxMthAvali, meYsUru, 1908\\
-78. & viVrasheYvasadAcAra saMgarxha &-& veV.mU. maNUra maThada malilxkAjuRna shAsitxrXV, liMgibArxhamxNa garxMthamAlA, soVlApura, 1905\\
-79. & viVrasheYva sadAcAra saMgarxha\newline (kananxDAnuvAda sahita) &-& (saM) paM. basavarAjashAsitxrXV pagaDadininx maTha, shirxV jagadugxru garxMtha parxkAshikA garxMthAvali, mUrusAvira maTha, hubabxLiLx, 1964\\
-80. & viVrasheYvAnaMdacaMdirxkA (vAdakAMDa)\newline (maritoVMTadAyaR) &-& (saM) shirxV soVmeVshavxrashAsitxrXV, shirxV jagadugxru gaMgAdhara saMsakxqqta mahApAThashAlA, hubabxLiLx, 1936\\
-81. & viVrasheYvoVtakxSaRparxdiVpikA &-& hAlapaTaTxNada cenanxbasavasAvxmi, shirxV duraduMDeVshavxramaTha, arabAvi, beLagAvi jilelx, 1936\\
-82. & viVrasheYva parxdiVpikA &-& shirxV jayacAmarAjeVMdarx garxMthamAlA, meYsUru, 1918\\
-83. & viVrasheYvapAriBASika padakoVsha (kananxDa) &-& DA|| esf. vidAyxshaMkarf, porx. bi. virUpAkaSxpapx, basava samiti, beMgaLUru, 2000\\
-84. & viVrAgamoVtatxramf (BA-1) &-& (saM) DA|| ecf. pi. malelxVdeVvaru, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1988\\
-85. & viVrAgama (kananxDa vAyxKAyxna sahita) &-& (saM) DA|| ja.ca.ni. shirxV jagadugxru paMcAcAyaR seVvA saMGa, gadaga-beTageVri, 1962\\
-86. & viVrasheYvoVpaniSatf &-& paM. kAshiVnAthashAsitxrXV, paMcAcAyaR perxsf, meYsUru, 1981 (ELaneya Avaqtitx)\\
-87. & veVdAMtasAraviVrasheYva ciMtAmaNi\newline (utatxrakAMDa) - (niTUTxru naMjaNAyaR) (marAThi anuvAda sahita) &-& (saM) shirxV malilxkAjuRnashAsitxrXV, shirxV datatx parxsAda siTxVmf perxsf, soVlApura, 1908\\
-88. & veYdika shivapUjA vidhi &-& paM. kAshiVnAthashAsitxrXV, paMcAcAyaR mudarxNAlaya, meYsUru, 1980 (eMTaneya Avaqtitx)\\
-89. & shatakatarxyamf (mAyideVva) &-& paM. veY. nAgeVshashAsitxrXV, muruGamaTha, dhAravADa, 1964\\
-90. & sharaBoVpaniSatf\newline (upaniSatasxMgarxha) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasiVdAsf, dehali, 1970\\
-91. & shabAdxthaR kwsutxBa\newline (saMsakxqqta-kananxDa niGaMTu) (BAga 1-6) &-& cakarxvatiR shirxVnivAsa rAjagoVpAlAcAyaR, bApokxV parxkAshana, beMgaLUru, 1999\\
-92. & shakitxvishiSATxdevxYta dashaRnamf &-& DA|| Ti.ji. sidadhxpApxrAdhayx, gubibx shirxV cenanxbasaveVshavxra garxMthamAlA, meYsUru, 1934\\
-93. & shakitxvishiSATxdevxYta tatatxvXtarxya vimashaRH\newline (saMsakxqqta) &-& DA|| caMdarxsheVKara shivAcAyaR mahAsAvxmigaLavaru, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1996\\
-94. & shakitxvishiSATxdevxYta tatatxvXtarxya vimasheR\newline (kananxDAnuvAda) &-& DA|| si. shivakumArasAvxmi, rAjayx patArxgAra ilAKe, (kanARTaka sakARra), beMgaLUru, 2009\\
-95. & shivatatatxvXratAnxkara\newline (keLadi basavaBUpAla) &-& pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, BAga-1 (1964), BAga-2 (1969), BAga-3 (1975)\\
-96. & shivatatatxvXratAnxkara\newline (kananxDAnuvAda sahita) &-& (saM) porx. malelxVpurA ji. veMkaTeVshf, kananxDa vishavxvidAyxlaya, haMpi, 1999\\
-97. & shivayoVga parxdiVpikA (cenanxsadAshivayoVgi)\newline (kananxDA TiVkA sahita) &-& TiVkAkAra, basavArAdhayx, kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa, 1976\\
-98. & shivAdevxYtamaMjariV (savxparxBAnaMda shivAcAyaR)\newline (kananxDa vAyxKAyxna sahita) &-& shirxV rAmAnuja ayayxMgArf, paMcAcAyaR perxsf, meYsUru, 1929\\
-99. & shivAdhikayxshiKAmaNi (soVsale reVvaNArAdhayx) &-& (saM) shirxV soVmasheVKarasAvxmi, namaH shivAya maTha, meYsUru, 1929\\
-100. & shivAgamaswraBa (kananxDa) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx, shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1985\\
-101. & shivAnuBavashabadxkoVsha (kananxDa) &-& Pa.gu. haLakaTiTx, samAja pusatxkAlaya, dhAravADa, 1962\\
-102. & sheYvadashaRna itihAsa matutx tatatxvXparxkAsha\newline (BoVjarAja viracita) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx, parxboVdha garxMthamAlA, meYsUru, 1974\\
-103. & sheYvoVpaniSatf\newline {\rm (SAIVOPANISADS)} &-& (saM) paM. mahAdeVvashAsitxrXV, aDAyxrf leYbarxri, madArxsf, 1925\\
-104. & sheYvapariBASA\newline (shivAgarxyoVgiVMdarxjAcnxnashivAcAyaR) &-& (saM) ecf.Arf. raMgasAvxmi ayayxMgArf, sakARri mudarxNAlaya, meYsUru, 1950\\
-105. & sheYvaratAnxkara (joyxVtinARtha) (BAga-1) &-& (saM) DA|| si.enf. basavarAju, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1992\\
-106. & sheYvaratAnxkara (joyxVtinARtha) (BAga-2) &-& (saM) malilxkAjuRna shAsitxrXV, liMgibArxhamxNa garxMthamAlA, soVlApura, 1909\\
-107. & sheYvasidAdhxMtadiVpikA\newline (mAheVshavxra) &-& (saM) pi.Arf. karibasavashAsitxrXV, shaMkara vilAsa perxsf, meYsUru, 1907\\
-108. & shurxtisAraBASayx\newline (shirxV shivapUjAshivaliMgashivayoVgiVMdarx) &-& (saM) DA|| Ti.ji. sidadhxpApxrAdhayx, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1913\\
-109. & shirxVkaraBASayx (shirxVpati paMDita) &-& (saM) DA|| Ti.ji. sidadhxpApxrAdhayx, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru (BAga-1, 1977), (BAga-2, 1978)\\
-110. & shevxVtAshavxtaroVpaniSatf\newline (viVrasheYvaBASoyxVpeVtA) &-& DA|| Ti.ji. sidadhxpApxrAdhayx, shirxV muruGAmaTha, citarxdugaR, 1965\\
-111. & sadAnaMdoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-112. & savaRdashaRnasaMgarxha\newline (mAdhavAcAyaR) &-& (saM) DA|| imamxDi shivabasavasAvxmigaLu, kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa, 1976\\
-113. & savAyxKAyxpaMcasholxVkiV\newline (keLadi basavarAja) &-& (saM) basavaliMgashAsitxrXV, enf.Arf. karibasavashAsitxrXV, meYsUru, 1912\\
-114. & sidAdhxMta shiKAmaNi\newline (shivayoVgi shivAcAyaR) &-& (saM) DA|| caMdarxsheVKara shivAcAyaR mahAsAvxmigaLu, viVrasheYva sAhitayx saMshoVdhana maMDaLa, soVlApura, 1990\\
-115. & sidAdhxMta shiKAmaNi (tatatxvX parxdiVpikA sahita)\newline (AMgAlxnuvAda - TipapxNi sahita) &-& DA|| eM. shivakumArasAvxmi, sheYvaBArati shoVdha parxtiSAThxnamf, vArANasi, 1907\\
-116. & sidAdhxMta shiKAmaNi\newline (soVsale reVvaNarAdhayxra sidAdhxMta boVdhiniV sahita) &-& (saM.) Di. sidadhxgaMgayayx, vijaya parxkAshana, lakekxVnahaLiLx, tumakUru, 2004\\
-117. & sUkASxmXgama (hiMdiV anuvAda) &-& (saM) paM. varxjavalalxBadivxveVdi, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1994\\
-118. & sUkASxmXgama (kananxDAnuvAda) &-& SaNumxKayayx akUkxramaTha, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2001\\
-\hline
-\end{longtable}}
-
 \vskip 1cm
 
+\begin{center}
+{\large\bf (3) viVrasheYva kAvayxgaLa saMkiSxpatx sUci}
+\end{center}
 
 {\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{lll}
