all pages are sent to another proof

--- a/mainfile.tex
+++ b/mainfile.tex
@@ -19,7 +19,7 @@
 %\input dict-1.tex %for jss-282-501.tex
 %\input dict-2.tex %for jss-282-501.tex
 %\input dictionary3
-%\input anu-dictionary
+\input anu-dictionary
 %\input dict-ta-ma-03042019
 %\input dict-ya-La-03042019
 \begin{document}
