--- a/tex-for-print/anubandha-3.tex
+++ b/tex-for-print/anubandha-3.tex
@@ -504,7 +504,7 @@ ha.koV. \> halAyudhakoVshaH
 45. &  kananxda - savasaM & kananxda mAri taMdeya vacanagaLu & samagarx saMpuTa - 7 & --\\
 46. &  karukeV - savasaM & karuLa keVtayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
 47. &  kalakeV - savasaM & kalakeVtayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
-48. &  reVcavevx - savasaM & kAlakUlayayxgaLa puNayxsitxrV reVcavevxya vacanagaLu & samagarx saMpuTa - 5 & --\\
+48. &  reVcavevx - savasaM & kAlakUlayayxgaLa puNayxsitxrXV reVcavevxya vacanagaLu & samagarx saMpuTa - 5 & --\\
 49. &  kAmABiV - savasaM & kAmATada BiVmaNaNxna vacanagaLu & samagarx saMpuTa - 7 & --\\
 50. &  kAlaka - savasaM & kAlakaNiNxya kAmamamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
 51. &  kinanxri - savasaM & kinanxri barxhamxyayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
@@ -736,13 +736,13 @@ ha.koV. \> halAyudhakoVshaH
 \end{center}
 
 {\renewcommand{\arraystretch}{1.3}
-\begin{longtable}{lll}
+\begin{longtable}{>{\raggedright}p{3.5cm}ll}
 \hline
 \multicolumn{1}{c}{\bf saMkiSxpAtxkaSxra} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf koTiTxruva saMKeyx}\\
 \hline
 \endfirsthead
 \hline
-\multicolumn{1}{c}{\bf saMkiSxpatx} & \multicolumn{1}{c}{\bf hesaru} & \multicolumn{1}{c}{\bf koTiTxruva saMKeyx}\\
+\multicolumn{1}{c}{\bf saMkiSxpatx} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf koTiTxruva saMKeyx}\\
 \hline
 \endhead
 \hline
@@ -770,10 +770,8 @@ parxBuliV & parxBuliMgaliVle & saMdhi, padayx\\
 basaTiV & basavaNaNxnavara TiVkina vacanagaLu & BAga, puTa, vacana-TiVku\\
 basapu & basavapurANa & saMdhi, padayx\\
 basava. ka. & basavaNaNxnavara vacanagaLu (kanARTaka vishavxvidAyxlaya) & vacana, puTa\\
-%maDimA. samava & maDivALa mAcideVvara vacana & BAga, puTa, vacana\\
 maDivA '' & maDivALapapxna nijaliVlAmaqta vacana & \qquad '' '' ''\\
 mishArxpaR & mishArxpaRNa & puTa, sAlu\\
-%liMgamamx, samava & haDapadapapxNaNxna puNayxsitxrXV liMgamamxna boVdheya vacanagaLu & BAga, puTa, vacana\\
 liMgaliV & liMgaliVlAvilAsa cAritarx & puTa, sAlu\\
 vacapa & vacana pariBASAkoVsha & BAga, puTa\\
 viveVka & viveVka ciMtAmaNi & puTa\\
@@ -783,6 +781,67 @@ Sabarxva & SaTasxthXlabarxhAmxnaMda virakatxcAritarx saMpAdaneya vacanagaLu & pu
 sidadhxrA. ka. & sidadhxrAmeVshavxra vacanagaLu (kanARTaka vishavxvidAyxlaya) & puTa, vacana\\
 sidedhxVva & sidedhxVshavxra vacanagaLu & puTa, vacana\\
 hirimaM & hiriya maMtarxgoVpayx & puTa, padayx\\
+anusA. & anuBavasAra & \\
+aSATxvi & aSATxvaraNa vicAradapaRNa & \\
+kani & kananxDa sAhitayx pariSatitxna kananxDa niGaMTu & \\
+kaBAge & muMbayi kanARTakada geje\\
+karaNa (cananxbasavaNaNxnavara vacanagaLu) (kanARTaka vishavxvidAyxlaya) & karaNa hasige &\\
+kavica & kanARTaka kavicarite & \\
+kUDasavx & kUDalUru basavaliMga sharaNara savxravacanagaLu & \\
+keVshirA & koMDaguLi keVshirAja & \\
+keYvaTiV & keYvalayxsArada TiVku & \\
+keYvapa & keYvalayxpadadhxti & \\
+keYvasha & keYvalayxsoVpAnanAmeYkoVtatxrashatasathxla & \\
+gaNaBA & gaNaBASitaratanxmAle & \\
+gurucA & gururAja cAritarx & \\
+cananxba. ka & cananxbasavaNaNxnavara vacanagaLu & \\
+cenanxsotxV & cenanxbasaveVshavxradeVvara sotxVtarxda vacanagaLu & \\
+cebapu & cenanxbasavapurANa & \\
+tirxpuvi & tirxSaSiTxpurAtana viLAsaM & \\
+diVkASxboV & diVkASxboVdhe & \\
+nUpura & nUtana purAtanara ragaLegaLu & \\
+padagoV & padamaMtarxgoVpayx & \\
+parate & paramAthaRgiVte & \\
+paramA & paramAnuBavaboVdhe & \\
+pArake & pAramAthaR parxkAshike & \\
+purAta & purAtanara tirxvidhi & \\
+parxtiSAThx & parxtiSAThxkalapx TiVke &\\
+parxBuliV & parxBuliMgaliVle & \\
+pwrxDharA & pwrxDharAyana kAvayx & \\
+basaTiV. {\rm I, II} & basavaNaNxnavara TiVkina vacanagaLu & \\
+basapu & basva purANa & \\
+basava. ka. & basavaNaNxnavara vacanagaLu & \\
+BArada & BAratiVya saMsakxqqti dashaRna & \\
+BAvaciM & BAvaciMtAratanxM & \\
+manoVvi & manoVvijaya & \\
+mishArxpaRNa (cananxbasavaNaNxnavara vacanagaLu, kanARTaka vishavxvidAyxlaya) & mishArxpaRNa &\\
+mumamxM & mumamxDi kAyeRVMdarxna veVdasaMjiVvini & \\
+rAjareV & rAjasheVKara viLAsaM & \\
+liMgaliV & liMgaliVlAvilAsa cAritarx & \\
+va.pA.koV. & vacanapariBASAkoVsha & \\
+vacara & vacanashAsatxrXrahasayx & \\
+vacashA & vacanashAsatxrXsAra & \\
+viveVka & viveVkaciMtAmaNi & \\
+viVsheYpu & viVrasheYvAmaqtapurANa & \\
+shakitxvi & shakitxvishiSATxdevxYtaveVdAMta & \\
+shabashaM & shabarashaMkaraviLAsaM & \\
+sharaca & sharaNacaritAmaqta & \\
+sharasA & sharaNa sAhitayx (mAsapatirxke) & \\
+shivaciM & shivatatatxvXciMtAmaNi & \\
+shivAkoV & shivAnuBava shabadxkoVsha & \\
+shivAsU & shivAnuBavasUtarxM & \\
+shUnayxku & shUnayxsaMpAdaneyanunx kuritu &\\
+shUnayxmaM & shUnayxmaMtarxgoVpayx & \\
+SabarxsaM. va saMpAdaneya vacanagaLu & SaTasxthXlabarxhAmxnaMda virakatxcAritarx & \\
+sakiVla (cananxbasavaNaNxnavara vacanagaLu, kanARTaka vishavxvidAyxlaya) & toMbatAtxru sakiVlagaLu & \\
+savaRva & savaRpurAtanara vacana & \\
+sAnaMca & sAnaMda cariterx & \\
+sidadhxrA. ka. & shirxV sidadhxrAmeVshavxra vacanagaLu & \\
+sidedhxVva & sidedhxVshavxra vacana & \\
+soVmaNaNx & koTArada soVmaNaNxna vacana & \\
+savxrUpa & savxrUpasididhxTiVke & \\
+hiMdasA & hiMdU dashaRnasAra & \\
+hirimaM (cananxbasavaNaNxnavara vacanagaLu, kanARTaka vishavxvidAyxlaya) & hiriya maMtarxgoVpayx & \\
 \hline
 \end{longtable}}
 %apapxNaNx, samava & haDapada apapxNaNxna vacanagaLu &  vacana, puTa\\
