format in progress

--- a/macros.tex
+++ b/macros.tex
@@ -40,8 +40,8 @@ headheight=5mm,headsep=5mm,footskip=6mm,cropmarks,nopagenumbers]{zwpagelayout}
 
 \def\eng#1{{\fontfamily{txr}\fontsize{12}{14}\selectfont #1}}
 
-\def\entry{\bigskip\bgroup\noindent\hangindent=0.5cm\hangafter=1\setcounter{num}{0}\ignorespaces}
-\def\endentry{\egroup\smallskip\vskip .6\baselineskip}
+\def\entry{\medskip\bgroup\noindent\hangindent=0.5cm\hangafter=1\setcounter{num}{0}\ignorespaces}
+\def\endentry{\egroup\vskip .6\baselineskip}
 
 \def\shl{\bgroup\raggedright\leftskip=12pt\vbox\bgroup\fontsize{11pt}{13pt}\selectfont\sl\ignorespaces}
 \def\endshl{\egroup\egroup\par}
