format work in progress

--- a/tex-for-print/anubandha-2.tex
+++ b/tex-for-print/anubandha-2.tex
@@ -80,7 +80,7 @@
 \hline
 30 & DA. ke. raviVMdarxnAtha, haMpi\\
 \hline
-\end{longtable}
+\end{longtable}}
 
 \vskip 1cm
 
@@ -120,5 +120,5 @@
 \hline
 9 & DA. niraMjanabAbu, beMgaLUru\\
 \hline
-\end{longtable}
+\end{longtable}}
 
