anubandha 1, 2 and 3 are sent to another proof

--- a/tex-for-print/ya-La.tex
+++ b/tex-for-print/ya-La.tex
@@ -7416,7 +7416,7 @@ viVrasheYveYkasidAdhxMteV savaRshurxtisamanavxyaH ||
 \word{viVrasheYvAkaSxra}
 \src{kA}
 \meaning{\arthanonum{deVhadalilxruva ELu cakarxgaLige saMbaMdhisidaMte iruva hadinAlukx sAvira akaSxragaLu:}
-\ullekha{viVrasheYvAkaSxraM hadinAlukxsAviraM cArutaradiMda, sAvira\-sAviresaLanuLeLxVLu padamxMgaLeYdu te{\ra}da japaviMtapapx parashiva surUpugaLu ne\char'273\char'311ye meYdoV{\ra}daMdeseva cidabxrXhAmxMDavu (viVsheYpu caMdirxkeV. 8-131-28); ``AdhAra, sAvxdhiSAThxna, maNipUraka, anAhata, \hbox{vishudidhx}, AgenxVya, barxhamxraMdharxveMba 7 cakarxkekx, AdhArAdi kamalagaLige parxteyxVka sAvira daLagaLu. ``namaH shivAya OM, a u ma' - oMdoMdu beVre beVre parxNamavenisuva oMdoMdakaSxrakekx beVre eraDeraDu sAvira nijAkaSxragaLu huTiTx karxmavAgi 7 cakarxkekx 14 sAvira daLAsharxyagaLalilx baLasiruva basava tarxyAkaSxragaLu, parxteyxVkadakaSxragaLaM baLasi, kamalakamalada daLadaLagaLalilx alaMkarisiruvavu" (viVsheYpu. tAtasxyaRcaMdirxke. 8-63 puTa).}}
+\ullekha{viVrasheYvAkaSxraM hadinAlukxsAviraM cArutaradiMda, sAvira\-sAviresaLanuLeLxVLu padamxMgaLeYdu te{\ra}da japaviMtapapx parashiva surUpugaLu ne\char'273\char'311ye meYdoV{\ra}daMdeseva cidabxrXhAmxMDavu (viVsheYpu caMdirxke. 8-131-28); ``AdhAra, sAvxdhiSAThxna, maNipUraka, anAhata, \hbox{vishudidhx}, AgenxVya, barxhamxraMdharxveMba 7 cakarxkekx, AdhArAdi kamalagaLige parxteyxVka sAvira daLagaLu. ``namaH shivAya OM, a u ma' - oMdoMdu beVre beVre parxNamavenisuva oMdoMdakaSxrakekx beVre eraDeraDu sAvira nijAkaSxragaLu huTiTx karxmavAgi 7 cakarxkekx 14 sAvira daLAsharxyagaLalilx baLasiruva basava tarxyAkaSxragaLu, parxteyxVkadakaSxragaLaM baLasi, kamalakamalada daLadaLagaLalilx alaMkarisiruvavu" (viVsheYpu. tAtasxyaRcaMdirxke. 8-63 puTa).}}
 \newmeaning{\ni{viVrasheYvaM itayxkaSxraM - viVrasheYvAkaSxraM}}
 \end{entry}
 
